--- a/app/admin/template/administrative/supplier/document.twig
+++ b/app/admin/template/administrative/supplier/document.twig
@@ -40,7 +40,7 @@
 			</td>
 			<td width="20">
 				<a href="/administrative/document?action=edit&id={{ document.id }}" title="{% trans "Edit document" %}">
-					<span class="glyphicon glyphicon-pencil"></span>
+					<i data-feather="edit"></i>
 				</a>
 			</td>
 		</tr>
