--- a/app/admin/template/bookkeeping/account/transaction.twig
+++ b/app/admin/template/bookkeeping/account/transaction.twig
@@ -30,7 +30,7 @@
 			<td>{{ transaction.other_account_name }}</td>
 			<td>
 				<a href="/financial/account/transaction?action=edit&bank_account_id={{ bank_account.id }}&id={{ transaction.id }}" title="">
-					<span class="glyphicon glyphicon-pencil"></span>
+					<i data-feather="edit"></i>
 				</a>
 			</td>
 		</tr>
