--- a/app/admin/template/mobile/index.twig
+++ b/app/admin/template/mobile/index.twig
@@ -13,7 +13,7 @@
 
 {% if not registered %}
 	<div class="row">
-		<div class="col-xs-12">
+		<div class="col-12">
 			<div class="alert alert-info">
 				{% trans "Your smartphone is not registered yet." %} {% trans "Please register your smartphone to add documents." %}
 			</div>
@@ -21,7 +21,7 @@
 	</div>
 
 	<div class="row">
-		<div class="col-xs-12">
+		<div class="col-12">
 			<a href="/mobile/register" class="btn btn-default btn-block">{% trans "Register smartphone" %}</a>
 		</div>
 	</div>
@@ -29,7 +29,7 @@
 
 
 	<div class="row">
-		<div class="col-xs-12">
+		<div class="col-12">
 			<a href="/mobile/scan" class="btn btn-primary btn-block btn-lg">
 				<i class="fa fa-camera"></i> {% trans "Scan document" %}
 			</a>
