--- a/app/admin/template/mobile/register.twig
+++ b/app/admin/template/mobile/register.twig
@@ -12,14 +12,14 @@
 		</div>
 
 		<div class="row">
-			<div class="col-xs-12">
+			<div class="col-12">
 				<div id="loadingMessage">{% trans "Please enable webcam" %}</div>
 				<canvas id="canvas" hidden class="img-responsive"></canvas>
 		  	</div>
 		</div>
 
 		<div class="row">
-			<div class="col-xs-12">
+			<div class="col-12">
 				<a href="/mobile" class="btn btn-default btn-block">{% trans "Back" %}</a>
 			</div>
 		</div>
