--- a/app/admin/template/administrative/customer/detail.twig
+++ b/app/admin/template/administrative/customer/detail.twig
@@ -21,65 +21,65 @@
 			{{ base.display_flash_message(env.sticky_session.message, 'customer') }}
 		{% endif %}
 
-		<div class="form-group{% if 'company' in errors|keys %} has-error{% endif %}">
-			<label for="company" class="col-xs-3 control-label">{% trans "Company" %}</label>
-			<div class="col-xs-9">
+		<div class="row mb-3{% if 'company' in errors|keys %} has-error{% endif %}">
+			<label for="company" class="col-form-label col-3 text-end">{% trans "Company" %}</label>
+			<div class="col-9">
 				<input type="text" name="customer[company]" id="company" class="form-control" value="{% if customer.company is defined and customer.company is not empty %}{{ customer.company }}{% elseif env.post.customer.company is defined %}{{ env.post.customer.company }}{% endif %}">
 				{{ form.invalid_input('company', errors) }}
 			</div>
 		</div>
 
-		<div class="form-group{% if 'firstname' in errors|keys %} has-error{% endif %}">
-			<label for="firstname" class="col-xs-3 control-label">{% trans "Firstname" %}</label>
-			<div class="col-xs-9">
+		<div class="row mb-3{% if 'firstname' in errors|keys %} has-error{% endif %}">
+			<label for="firstname" class="col-form-label col-3 text-end">{% trans "Firstname" %}</label>
+			<div class="col-9">
 				<input type="text" name="customer[firstname]" id="firstname" class="form-control" value="{% if customer.firstname is defined and customer.firstname is not empty %}{{ customer.firstname }}{% elseif env.post.customer.firstname is defined %}{{ env.post.customer.firstname }}{% endif %}">
 				{{ form.invalid_input('firstname', errors) }}
 			</div>
 		</div>
 
-		<div class="form-group{% if 'lastname' in errors|keys %} has-error{% endif %}">
-			<label for="lastname" class="col-xs-3 control-label">{% trans "Lastname" %}</label>
-			<div class="col-xs-9">
+		<div class="row mb-3{% if 'lastname' in errors|keys %} has-error{% endif %}">
+			<label for="lastname" class="col-form-label col-3 text-end">{% trans "Lastname" %}</label>
+			<div class="col-9">
 				<input type="text" name="customer[lastname]" id="lastname" class="form-control" value="{% if customer.lastname is defined and customer.lastname is not empty %}{{ customer.lastname }}{% elseif env.post.customer.lastname is defined %}{{ env.post.customer.lastname }}{% endif %}">
 				{{ form.invalid_input('lastname', errors) }}
 			</div>
 		</div>
 
-		<div class="form-group{% if 'street' in errors|keys %} has-error{% endif %}">
-			<label for="street" class="col-xs-3 control-label">{% trans "Street" %}</label>
-			<div class="col-xs-9">
+		<div class="row mb-3{% if 'street' in errors|keys %} has-error{% endif %}">
+			<label for="street" class="col-form-label col-3 text-end">{% trans "Street" %}</label>
+			<div class="col-9">
 				<input type="text" name="customer[street]" id="street" class="form-control" value="{% if customer.street is defined and customer.street is not empty %}{{ customer.street }}{% elseif env.post.customer.street is defined %}{{ env.post.customer.street }}{% endif %}">
 				{{ form.invalid_input('street', errors) }}
 			</div>
 		</div>
 
-		<div class="form-group{% if 'housenumber' in errors|keys %} has-error{% endif %}">
-			<label for="housenumber" class="col-xs-3 control-label">{% trans "Housenumber" %}</label>
-			<div class="col-xs-2">
+		<div class="row mb-3{% if 'housenumber' in errors|keys %} has-error{% endif %}">
+			<label for="housenumber" class="col-form-label col-3 text-end">{% trans "Housenumber" %}</label>
+			<div class="col-2">
 				<input type="text" name="customer[housenumber]" id="housenumber" class="form-control" value="{% if customer.housenumber is defined and customer.housenumber is not empty %}{{ customer.housenumber }}{% elseif env.post.customer.housenumber is defined %}{{ previous_submit.housenumber }}{% endif %}">
 				{{ form.invalid_input('housenumber', errors) }}
 			</div>
 		</div>
 
-		<div class="form-group{% if 'city' in errors|keys %} has-error{% endif %}">
-			<label for="city" class="col-xs-3 control-label">{% trans "City" %}</label>
-			<div class="col-xs-9">
+		<div class="row mb-3{% if 'city' in errors|keys %} has-error{% endif %}">
+			<label for="city" class="col-form-label col-3 text-end">{% trans "City" %}</label>
+			<div class="col-9">
 				<input type="text" name="customer[city]" id="city" class="form-control" value="{% if customer.city is defined and customer.city is not empty %}{{ customer.city }}{% elseif env.post.customer.city is defined %}{{ env.post.customer.city }}{% endif %}">
 				{{ form.invalid_input('city', errors) }}
 			</div>
 		</div>
 
-		<div class="form-group{% if 'zipcode' in errors|keys %} has-error{% endif %}">
-			<label for="zipcode" class="col-xs-3 control-label">{% trans "Zip code" %}</label>
-			<div class="col-xs-2">
+		<div class="row mb-3{% if 'zipcode' in errors|keys %} has-error{% endif %}">
+			<label for="zipcode" class="col-form-label col-3 text-end">{% trans "Zip code" %}</label>
+			<div class="col-2">
 				<input type="text" name="customer[zipcode]" id="zipcode" class="form-control" value="{% if customer.zipcode is defined and customer.zipcode is not empty%}{{ customer.zipcode }}{% elseif env.post.customer.zipcode is defined %}{{ env.post.customer.zipcode }}{% endif %}">
 				{{ form.invalid_input('zipcode', errors) }}
 			</div>
 		</div>
 
-		<div class="form-group{% if 'country_id' in errors|keys %} has-error{% endif %}">
-			<label for="country_id" class="col-xs-3 control-label">{% trans "Country" %}</label>
-			<div class="col-xs-9">
+		<div class="row mb-3{% if 'country_id' in errors|keys %} has-error{% endif %}">
+			<label for="country_id" class="col-form-label col-3 text-end">{% trans "Country" %}</label>
+			<div class="col-9">
 				<select name="customer[country_id]" class="form-control" onchange="change_country();">
 				{% for group in countries|keys  %}
 					{% if group == 'european' %}
@@ -98,63 +98,63 @@
 			</div>
 		</div>
 
-		<div class="form-group{% if 'email' in errors|keys %} has-error{% endif %}">
-			<label for="email" class="col-xs-3 control-label">{% trans "Email" %}</label>
-			<div class="col-xs-9">
+		<div class="row mb-3{% if 'email' in errors|keys %} has-error{% endif %}">
+			<label for="email" class="col-form-label col-3 text-end">{% trans "Email" %}</label>
+			<div class="col-9">
 				<input type="text" name="customer[email]" id="email" class="form-control" value="{% if customer.email is defined and customer.email is not empty %}{{ customer.email }}{% elseif env.post.customer.email is defined %}{{ env.post.customer.email }}{% endif %}">
 				{{ form.invalid_input('email', errors) }}
 			</div>
 		</div>
 
-		<div class="form-group{% if 'phone' in errors|keys %} has-error{% endif %}">
-			<label for="phone" class="col-xs-3 control-label">{% trans "Phone" %}</label>
-			<div class="col-xs-9">
+		<div class="row mb-3{% if 'phone' in errors|keys %} has-error{% endif %}">
+			<label for="phone" class="col-form-label col-3 text-end">{% trans "Phone" %}</label>
+			<div class="col-9">
 				<input type="text" name="customer[phone]" id="phone" class="form-control" value="{% if customer.phone is defined and customer.phone is not empty %}{{ customer.phone }}{% elseif env.post.customer.phone is defined %}{{ env.post.customer.phone }}{% endif %}">
 				{{ form.invalid_input('phone', errors) }}
 			</div>
 		</div>
 
-		<div class="form-group{% if 'mobile' in errors|keys %} has-error{% endif %}">
-			<label for="mobile" class="col-xs-3 control-label">{% trans "Mobile" %}</label>
-			<div class="col-xs-9">
+		<div class="row mb-3{% if 'mobile' in errors|keys %} has-error{% endif %}">
+			<label for="mobile" class="col-form-label col-3 text-end">{% trans "Mobile" %}</label>
+			<div class="col-9">
 				<input type="text" name="customer[mobile]" id="mobile" class="form-control" value="{% if customer.mobile is defined and customer.mobile is not empty %}{{ customer.mobile }}{% elseif env.post.customer.mobile is defined %}{{ env.post.customer.mobile }}{% endif %}">
 				{{ form.invalid_input('mobile', errors) }}
 			</div>
 		</div>
 
-		<div class="form-group{% if 'fax' in errors|keys %} has-error{% endif %}">
-			<label for="fax" class="col-xs-3 control-label">{% trans "Fax" %}</label>
-			<div class="col-xs-9">
+		<div class="row mb-3{% if 'fax' in errors|keys %} has-error{% endif %}">
+			<label for="fax" class="col-form-label col-3 text-end">{% trans "Fax" %}</label>
+			<div class="col-9">
 				<input type="text" name="customer[fax]" id="fax" class="form-control" value="{% if customer.fax is defined and customer.fax is not empty %}{{ customer.fax }}{% elseif env.post.customer.fax is defined %}{{ env.post.customer.fax }}{% endif %}">
 				{{ form.invalid_input('fax', errors) }}
 			</div>
 		</div>
 
-		<div class="form-group{% if 'vat' in errors|keys %} has-error{% endif %}">
-			<label for="vat" class="col-xs-3 control-label">{% trans "Vat" %}</label>
-			<div class="col-xs-1"><input type="text" class="form-control" id="vat_prefix" readonly value="AT" /></div>
-			<div class="col-xs-3">
+		<div class="row mb-3{% if 'vat' in errors|keys %} has-error{% endif %}">
+			<label for="vat" class="col-form-label col-3 text-end">{% trans "Vat" %}</label>
+			<div class="col-1"><input type="text" class="form-control" id="vat_prefix" readonly value="AT" /></div>
+			<div class="col-3">
 				<input type="text" name="customer[vat]" id="vat" class="form-control" value="{% if customer.vat is defined and customer.vat is not empty %}{{ customer.vat }}{% elseif env.post.customer.vat is defined %}{{ env.post.customer.vat }}{% endif %}">
 				{{ form.invalid_input('vat', errors) }}
 			</div>
 		</div>
 
-		<div class="form-group">
-			<label for="language_id" class="col-xs-3 control-label">{% trans "Language" %}</label>
-			<div class="col-xs-4">
+		<div class="row mb-3">
+			<label for="language_id" class="col-form-label col-3 text-end">{% trans "Language" %}</label>
+			<div class="col-4">
 				{{ form.select_language(languages, 'customer[language_id]', 'language_id', customer.language_id) }}
 			</div>
 		</div>
 
-		<div class="form-group">
-		    <label class="col-xs-3 control-label">{% trans "Comments" %}</label>
-		    <div class="col-xs-9">
+		<div class="row mb-3">
+		    <label class="col-form-label col-3 text-end">{% trans "Comments" %}</label>
+		    <div class="col-9">
 		        <textarea name="customer[comment]" class="form-control">{% if customer.comment is defined and customer.comment is not empty %}{{ customer.comment }}{% elseif env.post.customer.comment is defined %}{{ env.post.customer.comment }}{% endif %}</textarea>
 		    </div>
 		</div>
 
-		<div class="form-group">
-			<div class="col-xs-9 col-xs-offset-3">
+		<div class="row mb-3">
+			<div class="col-9 offset-3">
 				<button class="btn btn-primary">
 					{% trans "Save" %}
 				</button>
