--- a/app/admin/template/administrative/customer/invoice.twig
+++ b/app/admin/template/administrative/customer/invoice.twig
@@ -8,7 +8,7 @@
 			<p>{% trans "There are expired invoices for this customer" %}. {% trans "To download the expiration reminder, click on the invoice contact." %}</p>
 			<dl class="">
 				{% for invoice_contact in customer.get_customer_contacts() %}
-					<div class="col-xs-offset-1">
+					<div class="offset-1">
 						<strong>
 							<a href="/administrative/customer/contact?id={{ invoice_contact.id }}&action=invoice_reminder" class="alert-link">
 								{{ invoice_contact.get_display_name() }} ({{ invoice_contact.get_identifier() }})
@@ -30,11 +30,11 @@
 
 	{% for invoice in pager.items %}
 		{% if loop.first %}
-		<div class="panel panel-default">
-			<div class="panel-heading">
+		<div class="card">
+			<div class="card-header">
 				{{ base.pager_count(pager.item_count) }}
 			</div>
-			<div class="panel-body">
+			<div class="card-body">
 				<table class="table table-striped table-hover table-condensed">
 					<thead>
 						<tr>
@@ -58,12 +58,12 @@
 			<td>&euro;{{ invoice.get_price_incl()|number_format }}</td>
 			<td>
 					<a href="/sales/invoice?action=download&id={{ invoice.id }}">
-						<span class="glyphicon glyphicon-download"></span> {% trans "Invoice" %}
+						<i data-feather="download"></i> {% trans "Invoice" %}
 					</a>
 			</td>
 			<td>
 				<a href="/sales/invoice?action=edit&id={{ invoice.id }}">
-					<span class="glyphicon glyphicon-pencil"></span>
+					<i data-feather="edit"></i>
 				</a>
 			</td>
 		</tr>
