--- a/app/admin/template/administrative/customer/modal.customer_contact.twig
+++ b/app/admin/template/administrative/customer/modal.customer_contact.twig
@@ -206,7 +206,7 @@
 				$('#invoice-contact-form select').each(function() {
 					$(this).val($(this).find('option:first').val());
 				});
-				$('.form-group').removeClass('has-error');
+				$('.row mb-3').removeClass('has-error');
 				current_customer_contact_id = 0;
 
 				var $invoker = $(e.relatedTarget);
@@ -279,7 +279,7 @@
 		function validate_customer_contact() {
 			data = $('#invoice-contact-form').serialize();
 
-			$('.form-group').removeClass('has-error');
+			$('.row mb-3').removeClass('has-error');
 
 			$.post('/administrative/customer/contact?action=manage&id=' + current_customer_contact_id, data, function(data) {
 				if ("id" in data) {
@@ -288,7 +288,7 @@
 					$('.alert').removeClass('visually-hidden');
 					$.each(data, function(key, value) {
 						$('#invoice-contact-form #' + key).addClass('is-invalid');					
-						$('#invoice-contact-form #' + key).parents('.form-group').addClass('has-error');
+						$('#invoice-contact-form #' + key).parents('.row mb-3').addClass('has-error');
 					});
 				}
 				return false;
