--- a/app/admin/template/administrative/document/document.form.contract.twig
+++ b/app/admin/template/administrative/document/document.form.contract.twig
@@ -1,9 +1,9 @@
 	<hr>
 
-	<div class="form-group">
-		<label class="col-xs-3 control-label" style="line-height: 26px;">{% trans "Contract for" %}</label>
+	<div class="row mb-3">
+		<label class="col-form-label col-3 text-end" style="line-height: 26px;">{% trans "Contract for" %}</label>
 
-		<div class="col-xs-9">
+		<div class="col-9">
 			<label class="radio-inline" style="line-height: 28px;">
 				<input type="radio" name="contract_for" value="customer" {% if document.customer_id > 0 or document_customer_id == '' %}checked{% endif %}>{% trans "Customer" %}
 			</label>
@@ -32,34 +32,34 @@
 		}
 	</script>
 
-	<div class="form-group{% if 'supplier_id' in errors|keys %} has-error{% endif %} contract_for_supplier">
-		<label class="col-xs-3 control-label">{% trans "Supplier" %}</label>
-		<div class="col-xs-9">
+	<div class="row mb-3{% if 'supplier_id' in errors|keys %} has-error{% endif %} contract_for_supplier">
+		<label class="col-form-label col-3 text-end">{% trans "Supplier" %}</label>
+		<div class="col-9">
 			<input type="text" name="supplier" class="form-control typeahead autocomplete_supplier" value="{% if document.supplier_id > 0 %}{{ document.supplier.company }}{% endif %}" placeholder="{% trans "Search supplier" %}...">
 			<input type="hidden" class="supplier_id" name="document[supplier_id]" value="{{ document.supplier_id }}">
 
 		</div>
 	</div>
 
-	<div class="form-group{% if 'customer_id' in errors|keys %} has-error{% endif %} contract_for_customer">
-		<label class="col-xs-3 control-label">{% trans "Customer" %}</label>
-		<div class="col-xs-9">
+	<div class="row mb-3{% if 'customer_id' in errors|keys %} has-error{% endif %} contract_for_customer">
+		<label class="col-form-label col-3 text-end">{% trans "Customer" %}</label>
+		<div class="col-9">
 			<input type="text" name="customer" class="form-control typeahead autocomplete_customer" value="{% if document.customer_id > 0 %}{{ document.customer.get_display_name() }}{% endif %}" placeholder="{% trans "Search customer" %}...">
 			<input type="hidden" class="customer_id" name="document[customer_id]" value="{{ document.customer_id }}">
 
 		</div>
 	</div>
 
-	<div class="form-group">
-		<label class="col-xs-3 control-label">{% trans "From" %}</label>
-		<div class="col-xs-9">
+	<div class="row mb-3">
+		<label class="col-form-label col-3 text-end">{% trans "From" %}</label>
+		<div class="col-9">
 			<input type="text" class="form-control datepicker" name="document[from_date]" value="{{ document.from_date|date }}" />
 		</div>
 	</div>
 
-	<div class="form-group">
-		<label class="col-xs-3 control-label">{% trans "Until" %}</label>
-		<div class="col-xs-9">
+	<div class="row mb-3">
+		<label class="col-form-label col-3 text-end">{% trans "Until" %}</label>
+		<div class="col-9">
 			<input type="text" class="form-control datepicker" name="document[to_date]" value="{{ document.to_date|date }}" />
 		</div>
 	</div>
