--- a/app/admin/template/administrative/document/document.form.invoice.twig
+++ b/app/admin/template/administrative/document/document.form.invoice.twig
@@ -14,7 +14,7 @@
 				<div class="pull-right" style="padding-top: 8px;">
 					<a href="#modal-supplier-select" data-toggle="modal"><span class="glyphicon glyphicon-refresh"></span></a>
 					&nbsp;
-					<a href="/administrative/supplier/detail?id={{ document.supplier.id }}"><span class="glyphicon glyphicon-pencil"></span></a>
+					<a href="/administrative/supplier/detail?id={{ document.supplier.id }}"><i data-feather="edit"></i></a>
 				</div>
 				<address style="padding-top: 8px; padding-left: 5px;">
 					<strong style="margin-right: 10px;">{{ document.supplier.company }} {% if document.supplier.accounting_identifier %}({{ document.supplier.accounting_identifier }}){% endif %}</strong>
@@ -136,14 +136,14 @@
 	</div>
 
 	<div class="row mb-3 {% if 'payment_structured_message' in errors|keys %} has-error{% endif %}" id="payment_message_type_structured">
-		<div class="col-9 col-offset-3">
+		<div class="col-9 offset-3">
 			<input type="text" class="form-control" name="document[payment_structured_message]" value="{{ document.payment_structured_message }}" />
 		</div>
 	</div>
 
 
 	<div class="row mb-3" id="payment_message_type_free">
-		<div class="col-9 col-offset-3">
+		<div class="col-9 offset-3">
 			<textarea name="document[payment_message]" class="form-control autogrow">{{ document.payment_message }}</textarea>
 		</div>
 	</div>
