--- a/app/admin/template/administrative/document/invoice.twig
+++ b/app/admin/template/administrative/document/invoice.twig
@@ -47,7 +47,7 @@
 						</nav>
 					</div>
 				</div>
-			</div>			
+			</div>
 		{% else %}
 			<div class="row">
 				<div class="col">
@@ -70,7 +70,7 @@
 						</nav>
 					</div>
 				</div>
-			</div>	
+			</div>
 
 		{% endif %}
 	{% endblock breadcrumb %}
@@ -88,21 +88,21 @@
 			<form method="post" action="{{ env.module.get_path() }}">
 				<input type="hidden" id="input_advanced" name="advanced" value="{% if env.sticky_session.advanced %}1{% else %}0{% endif %}">
 				<div class="row mb-3">
-					<label class="col-2 col-form-label">{% trans "Search" %}</label>
+					<label class="col-form-label col-3 text-end">{% trans "Search" %}</label>
 					<div class="col-9">
 						<input type="text" name="search" class="form-control" value="{{ pager.get_search() }}">
 					</div>
 				</div>
 
 				<div class="row mb-3 form-advanced {% if env.sticky_session.advanced is not defined %}visually-hidden{% endif %}">
-					<label class="col-2 col-form-label">{% trans "Tags" %}</label>
+					<label class="col-form-label col-3 text-end">{% trans "Tags" %}</label>
 					<div class="col-9">
 						<input type="text" class="form-control autocomplete-tag" name="tag_ids" value="" />
 					</div>
 				</div>
 
 				<div class="row mb-3 form-advanced {% if env.sticky_session.advanced is not defined %}visually-hidden{% endif %}">
-					<label for="supplier_id" class="col-2 col-form-label">{% trans "Supplier" %}</label>
+					<label for="supplier_id" class="col-form-label col-3 text-end">{% trans "Supplier" %}</label>
 					<div class="col-9">
 						<input type="text" name="supplier" value="{{ selected_supplier.company }}" class="form-control typeahead autocomplete_supplier" placeholder="{% trans "Search supplier" %}..."/>
 						<input type="hidden" class="supplier_id" name="supplier_id" value="{% if selected_supplier is defined %}{{ selected_supplier.id }}{% endif %}"/>
@@ -110,7 +110,7 @@
 				</div>
 
 				<div class="row mb-3 form-advanced {% if env.sticky_session.advanced is not defined %}visually-hidden{% endif %}">
-					<label class="col-2 col-form-label">{% trans "Paid" %}</label>
+					<label class="col-form-label col-3 text-end">{% trans "Paid" %}</label>
 					<div class="col-9">
 						<select name="paid" class="form-control">
 							<option value="-1">{% trans "All" %}</option>
@@ -121,7 +121,7 @@
 				</div>
 
 				<div class="row mb-3 form-advanced {% if env.sticky_session.advanced is not defined %}visually-hidden{% endif %}">
-					<label class="col-2 control-label">{% trans "Booking status" %}</label>
+					<label class="col-form-label col-3 text-end">{% trans "Booking status" %}</label>
 					<div class="col-9">
 						<select name="accounting_identifier" class="form-control">
 							<option value="all">{% trans "Any" %}</option>
@@ -131,8 +131,8 @@
 					</div>
 				</div>
 
-				<div class="form-group">
-					<div class="col-3 offset-2">
+				<div class="row mb-3">
+					<div class="col-3 offset-3">
 						<button class="btn btn-primary">
 							{% trans "Search" %}
 						</button>
