--- a/app/admin/template/administrative/document/invoice/pay.twig
+++ b/app/admin/template/administrative/document/invoice/pay.twig
@@ -2,12 +2,32 @@
 
 {% block content %}
 
-<ul class="breadcrumb">
-	<li><a href="/">{% trans "Home" %}</li></a>
-	<li><a href="/administrative/document">{% trans "Documents" %}</a></li>
-	<li><a href="/administrative/document/invoice">{% trans "Incoming Invoices" %}</a></li>
-	<li class="active">{% trans "Pay Incoming Invoice" %}</li>
-</ul>
+<div class="row">
+	<div class="col">
+		<h4>{% trans "Documents" %}</h4>
+	</div>
+	<div class="col">
+		<div class="float-end">
+			<nav aria-label="breadcrumb">
+				<ol class="breadcrumb">
+					<li class="breadcrumb-item">
+						<a href="/administrative/document">
+							{% trans "Documents" %}
+						</a>
+					</li>
+					<li class="breadcrumb-item">
+						<a href="/administrative/document/invoice">
+							{% trans "Incoming Invoices" %}
+						</a>
+					</li>
+					<li class="breadcrumb-item active">
+						{% trans "Pay Incoming Invoice" %}
+					</li>
+				</ol>
+			</nav>
+		</div>
+	</div>
+</div>
 
 {% for unpaid_invoice in pager.items %}
 
@@ -16,7 +36,11 @@
 		<table class="table-alternate table-hover table table-condensed">
 		<thead>
 			<tr>
-				<th width="120"><input type="checkbox" class="original2" data-group-cls="btn-group-xs" onchange="toggle_all();"></th>
+				<th width="120">
+					<div class="form-check form-switch">						
+						<input class="form-check-input" type="checkbox" class="original2" data-group-cls="btn-group-xs" onchange="toggle_all();">
+					</div>
+				</th>
 				<th>{{ pager.create_header('Date'|trans, 'date')|raw }}</th>
 				<th>{{ pager.create_header('Expiration date'|trans, 'document_incoming_invoice.expiration_date')|raw }}</th>
 				<th>{{ pager.create_header('Supplier'|trans, 'supplier.company')|raw }}</th>
@@ -30,7 +54,11 @@
 	{% endif %}
 
 	<tr data-price="{{ unpaid_invoice.price_incl }}">
-		<td><input type="checkbox" data-group-cls="btn-group-xs" name="invoice[{{ unpaid_invoice.id }}]" onchange="calculate_sum();"></td>
+		<td>
+			<div class="form-check form-switch">		
+				<input class="form-check-input" type="checkbox" data-group-cls="btn-group-xs" name="invoice[{{ unpaid_invoice.id }}]" onchange="calculate_sum();">
+			</div>
+		</td>
 		<td>{{ unpaid_invoice.date|date }}</td>
 		<td>{{ unpaid_invoice.expiration_date|date }}</td>
 		<td>{{ unpaid_invoice.supplier.company }}</td>
@@ -63,54 +91,60 @@
 		</tbody>
 		</table>
 
-		<div class="well">
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Total amount" %}</label>
-				<div class="col-xs-9">
-					<p class="form-control-static" id="total_amount">&euro;0</p>
+		<div class="card text-bg-light">
+			<div class="card-body">
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "Total amount" %}</label>
+					<div class="col-9">
+						<p class="form-control-plaintext" id="total_amount">&euro;0</p>
+					</div>
 				</div>
-			</div>
 
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Export format" %}</label>
-				<div class="col-xs-4">
-					<select name="export_format" class="form-control">
-						<option value="Export_Payment_Sepa">SEPA (pain.001.001.03)</option>
-						<option value="Export_Payment_Belfius">Belfius CSV</option>
-					</select>
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "Export format" %}</label>
+					<div class="col-4">
+						<select name="export_format" class="form-control">
+							<option value="Export_Payment_Sepa">SEPA (pain.001.001.03)</option>
+							<option value="Export_Payment_Belfius">Belfius CSV</option>
+						</select>
+					</div>
 				</div>
-			</div>
 
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Pay with bank account" %}</label>
-				<div class="col-xs-4">
-					<select name="bank_account_id" class="form-control multiselect">
-						{% for bank_account in bank_accounts %}
-							<option value="{{ bank_account.id }}" data-content="<b>{% if bank_account.alias != '' %}{{ bank_account.alias }}{% else %}{{ bank_account.number }}{% endif %}</b><br />{{ bank_account.name }}<br />{{ bank_account.description }}<br />{{ bank_account.number }}" {% if bank_account.default_for_payment %}selected{% endif %}>{{ bank_account.name }} ({{ bank_account.number }})</option>
-						{% endfor %}
-					</select>
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "Pay with bank account" %}</label>
+					<div class="col-4">
+						<select name="bank_account_id" class="form-control multiselect">
+							{% for bank_account in bank_accounts %}
+								<option value="{{ bank_account.id }}" data-content="<b>{% if bank_account.alias != '' %}{{ bank_account.alias }}{% else %}{{ bank_account.number }}{% endif %}</b><br />{{ bank_account.name }}<br />{{ bank_account.description }}<br />{{ bank_account.number }}" {% if bank_account.default_for_payment %}selected{% endif %}>{{ bank_account.name }} ({{ bank_account.number }})</option>
+							{% endfor %}
+						</select>
+					</div>
 				</div>
-			</div>
 
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Pay on expiration date" %}</label>
-				<div class="col-xs-9">
-					<input type="checkbox" name="pay_on_expiration_date" data-group-cls="btn-group-xs" />
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "Pay on expiration date" %}</label>
+					<div class="col-9">
+						<div class="form-check form-switch">										
+							<input class="form-check-input" type="checkbox" name="pay_on_expiration_date" data-group-cls="btn-group-xs" />
+						</div>
+					</div>
 				</div>
-			</div>
 
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Mark selected items as paid" %}</label>
-				<div class="col-xs-9">
-					<input type="checkbox" name="mark_paid" data-group-cls="btn-group-xs"  />
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "Mark selected items as paid" %}</label>
+					<div class="col-9">
+						<div class="form-check form-switch">					
+							<input class="form-check-input" type="checkbox" name="mark_paid" data-group-cls="btn-group-xs"  />
+						</div>
+					</div>
 				</div>
-			</div>
 
-			<div class="form-group">
-				<div class="col-xs-9 col-xs-offset-3">
-					<button type="submit" class="btn btn-primary">
-						{% trans "Download" %}
-					</button>
+				<div class="row mb-3">
+					<div class="col-9 offset-3">
+						<button type="submit" class="btn btn-primary">
+							{% trans "Download" %}
+						</button>
+					</div>
 				</div>
 			</div>
 
@@ -129,6 +163,7 @@
 		} else {
 			$('td input[type=checkbox]').prop('checked', false);
 		}
+		calculate_sum();
 	}
 
 	function calculate_sum() {
