--- a/app/admin/template/administrative/document/modal.supplier_select.twig
+++ b/app/admin/template/administrative/document/modal.supplier_select.twig
@@ -5,9 +5,9 @@
 {% block body %}
 
 	<form class="form-horizontal form-condensed" method="post" action="?action=edit_supplier&id={{ document.id }}" id="form-supplier-select-modal">
-		<div class="form-group">
-			<label for="supplier_id" class="control-label col-xs-3">{% trans "Supplier" %}</label>
-			<div class="col-xs-9">
+		<div class="row mb-3">
+			<label for="supplier_id" class="col-form-label col-3 text-end">{% trans "Supplier" %}</label>
+			<div class="col-9">
 				<input type="text" name="supplier" class="form-control typeahead autocomplete_supplier" placeholder="{% trans "Search supplier" %}..."/>
 				<input type="hidden" class="supplier_id" name="document[supplier_id]" value=""/>
 			</div>
