--- a/app/admin/template/administrative/role.twig
+++ b/app/admin/template/administrative/role.twig
@@ -5,29 +5,45 @@
 {% block content %}
 
 {% if action == 'edit' %}
-	<ol class="breadcrumb">
-		<li><a href="/">{% trans "Home" %}</a></li>
-		<li><a href="/administrative/role">{% trans "Roles" %}</a></li>
-		<li class="active">{{ role.name }}</li>
-	</ol>
+	<div class="row">
+		<div class="col">
+			<h4>{% trans "Roles" %}</h4>
+		</div>
+		<div class="col">
+			<div class="float-end">
+				<nav aria-label="breadcrumb">
+					<ol class="breadcrumb">
+						<li class="breadcrumb-item">
+							<a href="/administrative/role">
+								{% trans "Roles" %}
+							</a>
+						</li>
+						<li class="breadcrumb-item active">
+							{% trans "Edit role" %} {{ role.name }}
+						</li>
+					</ol>
+				</nav>
+			</div>
+		</div>
+	</div>
 
 	{% if env.sticky_session.message == 'updated' %}
-		{{ base.display_flash_message(env.sticky_session.message, 'role') }}
+		{{ base.alert('success', 'Role permissions successfully updated'|trans) }}
 	{% endif %}
 
 
 	<form class="form-horizontal" method="post" action="/administrative/role?action=edit&id={{ role.id }}">
 
-		<div class="panel panel-default">
-			<div class="panel-heading">{% trans "Role details" %}</div>
-			<div class="panel-body">
-				<div class="form-group">
-					<label class="col-xs-3 control-label">{% trans "Name" %}</label>
-					<div class="col-xs-9"><input type="text" name="role[name]" class="form-control" value="{{ role.name }}" /></div>
+		<div class="card mb-3">
+			<div class="card-header">{% trans "Role details" %}</div>
+			<div class="card-body">
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "Name" %}</label>
+					<div class="col-9"><input type="text" name="role[name]" class="form-control" value="{{ role.name }}" /></div>
 				</div>
 
-				<div class="form-group">
-					<div class="col-xs-offset-3 col-xs-9">
+				<div class="row mb-3">
+					<div class="offset-3 col-9">
 						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 					</div>
 				</div>
@@ -37,16 +53,16 @@
 	</form>
 
 	{% if env.sticky_session.message == 'updated_permissions' %}
-		{{ base.display_flash_message('updated', 'role permissions') }}
+		{{ base.alert('success', 'Role permissions successfully updated'|trans) }}
 	{% endif %}
 
 	<form class="form-horizontal" method="post" action="/administrative/role?action=edit_permissions&id={{ role.id }}">
-		<div class="panel panel-default">
-			<div class="panel-heading">{% trans "Permissions" %}</div>
-			<div class="panel-body">
-				<div class="form-group">
-					<label class="col-xs-3 control-label">{% trans "Select permissions" %}</label>
-					<div class="col-xs-9">
+		<div class="card">
+			<div class="card-header">{% trans "Permissions" %}</div>
+			<div class="card-body">
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "Select permissions" %}</label>
+					<div class="col-9">
 						<select name="permission_ids[]" class="multiselect" multiple="multiple">
 							{% for permission in permissions %}
 								<option value="{{ permission.id }}" {% if role.has_permission(permission) %}selected{% endif %}>
@@ -82,8 +98,8 @@
 					</div>
 				</div>
 
-				<div class="form-group">
-					<div class="col-xs-offset-3 col-xs-9">
+				<div class="row mb-3">
+					<div class="offset-3 col-9">
 						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 					</div>
 				</div>
@@ -91,28 +107,36 @@
 		</div>
 	</form>
 
+	<script type="text/javascript">
+	$('select').select2({
+	  theme: "bootstrap-5",
+	  closeOnSelect: false
+	});
+	</script>
+
 
 {% else %}
-	<ol class="breadcrumb">
-		<li><a href="/">{% trans "Home" %}</a></li>
-		<li class="active">{% trans "Roles" %}</li>
-	</ol>
+	<div class="row">
+		<div class="col">
+			<h4>{% trans "Roles" %}</h4>
+		</div>
+	</div>
 
 	<form class="form-horizontal" method="post" action="/administrative/role">
-	<div class="panel panel-default">
-		<div class="panel-heading">
+	<div class="card mb-3">
+		<div class="card-header">
 			{% trans "Filter" %}
 		</div>
-		<div class="panel-body">
-			<div class="form-group">
-				<label class="control-label col-xs-3">{% trans "Search" %}</label>
-				<div class="col-xs-9">
+		<div class="card-body">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Search" %}</label>
+				<div class="col-9">
 					<input type="text" class="form-control" name="search" value="{{ pager.get_search() }}"/>
 				</div>
 			</div>
 
-			<div class="form-group">
-				<div class="controls col-xs-offset-3 col-xs-9">
+			<div class="row mb-3">
+				<div class="controls offset-3 col-9">
 					<button class="btn btn-primary" type="submit">
 						{% trans "Search" %}
 					</button>
@@ -122,21 +146,21 @@
 	</div>
 	</form>
 
-	{% include "administrative/role/new.twig" with {"id": "new_role"} %}
+	{% include "administrative/role/modal.new.twig" with {"id": "new_role"} %}
 
 
-	<div class="panel panel-default">
-		<div class="panel-heading">
+	<div class="card">
+		<div class="card-header">
 			<div class="pull-right">
-				<a href="#new_role" data-toggle="modal">
-					<span class="glyphicon glyphicon-plus-sign"></span>
+				<a href="#new_role" data-bs-toggle="modal">
+					<i data-feather="plus"></i>
 					{% trans "Add role" %}
 				</a>
 			</div>
 
 			{{ base.pager_count(pager.item_count) }}
 		</div>
-		<div class="panel-body">
+		<div class="card-body">
 			{% for role in pager.items %}
 				{% if loop.first %}
 				<table class="table table-striped table-hover table-condensed">
@@ -154,12 +178,12 @@
 
 					<td>
 						<a href="/administrative/role?id={{ role.id }}&action=edit">
-							<span class="glyphicon glyphicon-pencil"></span>
+							<i data-feather="edit"></i>
 						</a>
 					</td>
 					<td>
-						<a href="/administrative/role?id={{ role.id }}&action=delete" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure" %}?">
-							<span class="glyphicon glyphicon-remove" />
+						<a href="/administrative/role?id={{ role.id }}&action=delete" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure you want to delete role" %} {{ role.name }}?">
+							<i data-feather="trash-2"></i>
 						</a>
 					</td>
 				</tr>
