--- a/app/admin/template/administrative/supplier.twig
+++ b/app/admin/template/administrative/supplier.twig
@@ -40,43 +40,43 @@
 		{% endif %}
 
 		<form class="form form-horizontal form-condensed" method="post" action="/administrative/supplier?action=add">
-			<div class="panel panel-default">
-				<div class="panel-heading">
+			<div class="card">
+				<div class="card-header">
 					{% trans "Details" %}
 				</div>
-				<div class="panel-body">
+				<div class="card-body">
 
-					<div class="form-group{% if 'company' in errors|keys %} has-error{% endif %}">
-						<label for="company" class="control-label col-xs-3">{% trans "Company" %}</label>
-						<div class="col-xs-5">
+					<div class="row mb-3{% if 'company' in errors|keys %} has-error{% endif %}">
+						<label for="company" class="col-form-label col-3 text-end">{% trans "Company" %}</label>
+						<div class="col-5">
 							<input type="text" name="supplier[company]" id="company" class="form-control" value="{{ env.post.supplier.company }}">
 							{{ form.invalid_input('company', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Street" %}</label>
-						<div class="col-xs-5"><input type="text" name="supplier[street]" class="form-control" value="{{ env.post.supplier.street }}"/></div>
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "Street" %}</label>
+						<div class="col-5"><input type="text" name="supplier[street]" class="form-control" value="{{ env.post.supplier.street }}"/></div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Housenumber" %}</label>
-						<div class="col-xs-5"><input type="text" name="supplier[housenumber]" class="form-control" value="{{ env.post.supplier.housenumber }}"/></div>
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "Housenumber" %}</label>
+						<div class="col-5"><input type="text" name="supplier[housenumber]" class="form-control" value="{{ env.post.supplier.housenumber }}"/></div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Zipcode" %}</label>
-						<div class="col-xs-5"><input type="text" name="supplier[zipcode]" class="form-control" value="{{ env.post.supplier.zipcode }}"/></div>
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "Zipcode" %}</label>
+						<div class="col-5"><input type="text" name="supplier[zipcode]" class="form-control" value="{{ env.post.supplier.zipcode }}"/></div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "City" %}</label>
-						<div class="col-xs-5"><input type="text" name="supplier[city]" class="form-control" value="{{ env.post.supplier.city }}"/></div>
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "City" %}</label>
+						<div class="col-5"><input type="text" name="supplier[city]" class="form-control" value="{{ env.post.supplier.city }}"/></div>
 					</div>
 
-					<div class="form-group {% if 'country_id' in errors|keys %} has-error{% endif %}">
-						<label for="country_id" class="col-xs-3 control-label">{% trans "Country" %}</label>
-						<div class="col-xs-5">
+					<div class="row mb-3 {% if 'country_id' in errors|keys %} has-error{% endif %}">
+						<label for="country_id" class="col-form-label col-3 text-end">{% trans "Country" %}</label>
+						<div class="col-5">
 							<select name="supplier[country_id]" class="form-control" onchange="change_country();">
 							{% for group in countries|keys  %}
 								{% if group == 'european' %}
@@ -94,48 +94,48 @@
 						</div>
 					</div>
 
-					<div class="form-group{% if 'vat' in errors|keys %} has-error{% endif %}">
-						<label for="vat" class="control-label col-xs-3">{% trans "Vat" %}</label>
-						<div class="col-xs-1"><input type="text" class="form-control" id="vat_prefix" readonly value="AT" /></div>
-						<div class="col-xs-4">
+					<div class="row mb-3{% if 'vat' in errors|keys %} has-error{% endif %}">
+						<label for="vat" class="col-form-label col-3 text-end">{% trans "Vat" %}</label>
+						<div class="col-1"><input type="text" class="form-control" id="vat_prefix" readonly value="AT" /></div>
+						<div class="col-4">
 							<input type="text" name="supplier[vat]" id="vat" class="form-control" value="{{ env.post.supplier.vat }}">
 							{{ form.invalid_input('vat', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'accounting_identifier' in errors|keys %} has-error{% endif %}">
-						<label for="accounting_identifier" class="control-label col-xs-3">{% trans "Accounting identifier" %}</label>
-						<div class="col-xs-5">
+					<div class="row mb-3{% if 'accounting_identifier' in errors|keys %} has-error{% endif %}">
+						<label for="accounting_identifier" class="col-form-label col-3 text-end">{% trans "Accounting identifier" %}</label>
+						<div class="col-5">
 							<input type="text" name="supplier[accounting_identifier]" id="vat" class="form-control" value="{{ supplier.accounting_identifier }}">
 							{{ form.invalid_input('accounting_identifier', errors) }}
 						</div>
 					</div>
 
-                    <div class="form-group{% if 'iban' in errors|keys %} has-error{% endif %}">
-						<label for="accounting_identifier" class="control-label col-xs-3">{% trans "IBAN" %}</label>
-						<div class="col-xs-5">
+                    <div class="row mb-3{% if 'iban' in errors|keys %} has-error{% endif %}">
+						<label for="accounting_identifier" class="col-form-label col-3 text-end">{% trans "IBAN" %}</label>
+						<div class="col-5">
 							<input type="text" name="supplier[iban]" id="iban" class="form-control" value="{% if supplier.iban is defined %}{{ supplier.iban }}{% elseif env.post.supplier.iban is defined %}{{ env.post.supplier.iban }}{% endif %}">
 							{{ form.invalid_input('iban', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'bic' in errors|keys %} has-error{% endif %}">
-						<label for="accounting_identifier" class="control-label col-xs-3">{% trans "BIC" %}</label>
-						<div class="col-xs-5">
+					<div class="row mb-3{% if 'bic' in errors|keys %} has-error{% endif %}">
+						<label for="accounting_identifier" class="col-form-label col-3 text-end">{% trans "BIC" %}</label>
+						<div class="col-5">
 							<input type="text" name="supplier[bic]" id="bic" class="form-control" value="{{ supplier.bic }}">
 							{{ form.invalid_input('bic', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group">
-					    <label class="col-xs-3 control-label">{% trans "Comments" %}</label>
-					    <div class="col-xs-5">
+					<div class="row mb-3">
+					    <label class="col-form-label col-3 text-end">{% trans "Comments" %}</label>
+					    <div class="col-5">
 					        <textarea name="supplier[comment]" class="form-control">{{ env.post.supplier.comment }}</textarea>
 					    </div>
 					</div>
 
-					<div class="form-group">
-						<div class="col-xs-3 col-xs-offset-3">
+					<div class="row mb-3">
+						<div class="col-3 offset-3">
 							<button class="btn btn-primary">
 								{% trans "Save" %}
 							</button>
@@ -164,20 +164,20 @@
 			<li class="active">{% trans "Suppliers" %}</li>
 		</ol>
 
-		<div class="panel panel-default">
-			<div class="panel-heading">
+		<div class="card">
+			<div class="card-header">
 				{% trans "Filter" %}
 			</div>
-			<div class="panel-body">
+			<div class="card-body">
 				<form method="post" action="/administrative/supplier" class="form-horizontal">
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Search" %}</label>
-						<div class="col-xs-5">
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "Search" %}</label>
+						<div class="col-5">
 							<input type="text" name="search" class="form-control" value="{{ pager.get_search() }}">
 						</div>
 					</div>
-					<div class="form-group">
-						<div class="col-xs-3 col-xs-offset-3">
+					<div class="row mb-3">
+						<div class="col-3 offset-3">
 							<button class="btn btn-primary">
 								{% trans "Search" %}
 							</button>
@@ -191,17 +191,17 @@
 			{{ base.display_flash_message(env.sticky_session.message, 'supplier') }}
 		{% endif %}
 
-		<div class="panel panel-default">
-			<div class="panel-heading">
+		<div class="card">
+			<div class="card-header">
 				<div class="pull-right">
 					<a href="/administrative/supplier?action=add" title="">
-						<span class="glyphicon glyphicon-plus-sign"></span>
+						<i data-feather="plus"></i>
 						{% trans "Add supplier" %}
 					</a>
 				</div>
 				{{ base.pager_count(pager.item_count) }}
 			</div>
-			<div class="panel-body">
+			<div class="card-body">
 			{% for supplier in pager.items %}
 			{% if loop.first %}
 				<table class="table table-hover table-striped table-condensed table-responsive">
@@ -230,7 +230,7 @@
 				<td>{{ supplier.accounting_identifier }}</td>
 				<td>
 					<a href="/administrative/supplier/detail?id={{ supplier.id }}" title="">
-						<span class="glyphicon glyphicon-pencil"></span>
+						<i data-feather="edit"></i>
 					</a>
 				</td>
 			</tr>
