--- a/app/admin/template/administrative/tag.twig
+++ b/app/admin/template/administrative/tag.twig
@@ -17,16 +17,16 @@
 
 	<form class="form-horizontal" method="post" action="/administrative/tag?action=edit&id={{ tag.id }}">
 
-		<div class="panel panel-default">
-			<div class="panel-heading">{% trans "Tag details" %}</div>
-			<div class="panel-body">
-				<div class="form-group">
-					<label class="col-xs-3 control-label">{% trans "Name" %}</label>
-					<div class="col-xs-9"><input type="text" name="tag[name]" class="form-control" value="{{ tag.name }}" /></div>
+		<div class="card">
+			<div class="card-header">{% trans "Tag details" %}</div>
+			<div class="card-body">
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "Name" %}</label>
+					<div class="col-9"><input type="text" name="tag[name]" class="form-control" value="{{ tag.name }}" /></div>
 				</div>
 
-				<div class="form-group">
-					<div class="col-xs-offset-3 col-xs-9">
+				<div class="row mb-3">
+					<div class="offset-3 col-9">
 						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 					</div>
 				</div>
@@ -43,20 +43,20 @@
 	</ol>
 
 	<form class="form-horizontal" method="post" action="/administrative/tag">
-	<div class="panel panel-default">
-		<div class="panel-heading">
+	<div class="card">
+		<div class="card-header">
 			{% trans "Filter" %}
 		</div>
-		<div class="panel-body">
-			<div class="form-group">
-				<label class="control-label col-xs-3">{% trans "Search" %}</label>
-				<div class="col-xs-9">
+		<div class="card-body">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Search" %}</label>
+				<div class="col-9">
 					<input type="text" class="form-control" name="search" value="{{ pager.get_search() }}"/>
 				</div>
 			</div>
 
-			<div class="form-group">
-				<div class="controls col-xs-offset-3 col-xs-9">
+			<div class="row mb-3">
+				<div class="controls offset-3 col-9">
 					<button class="btn btn-primary" type="submit">
 						{% trans "Search" %}
 					</button>
@@ -69,18 +69,18 @@
 	{% include "administrative/tag/new.twig" with {"id": "new_tag"} %}
 
 
-	<div class="panel panel-default">
-		<div class="panel-heading">
+	<div class="card">
+		<div class="card-header">
 			<div class="pull-right">
 				<a href="#new_tag" data-toggle="modal">
-					<span class="glyphicon glyphicon-plus-sign"></span>
+					<i data-feather="plus"></i>
 					{% trans "Add tag" %}
 				</a>
 			</div>
 
 			{{ base.pager_count(pager.item_count) }}
 		</div>
-		<div class="panel-body">
+		<div class="card-body">
 			{% for tag in pager.items %}
 				{% if loop.first %}
 				<table class="table table-striped table-hover table-condensed">
@@ -98,12 +98,12 @@
 
 					<td>
 						<a href="/administrative/tag?id={{ tag.id }}&action=edit">
-							<span class="glyphicon glyphicon-pencil"></span>
+							<i data-feather="edit"></i>
 						</a>
 					</td>
 					<td>
 						<a href="/administrative/tag?id={{ tag.id }}&action=delete" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure" %}?">
-							<span class="glyphicon glyphicon-remove" />
+							<i data-feather="trash-2"></i>
 						</a>
 					</td>
 				</tr>
