--- a/app/admin/template/administrative/tag/new.twig
+++ b/app/admin/template/administrative/tag/new.twig
@@ -8,9 +8,9 @@
 	</div>
 	<form class="form-horizontal" method="post">
 		<input type="hidden" name="action" value="add" >
-		<div class="form-group">
-			<label class="control-label col-xs-4">{% trans "Name" %}</label>
-			<div class="col-xs-8">
+		<div class="row mb-3">
+			<label class="control-label col-4">{% trans "Name" %}</label>
+			<div class="col-8">
 				<input type="text" name="tag[name]" id="name" class="form-control" />
 			</div>
 		</div>
