--- a/app/admin/template/administrative/user/mobile/modal.new.twig
+++ b/app/admin/template/administrative/user/mobile/modal.new.twig
@@ -14,5 +14,5 @@
 {% endblock body %}
 
 {% block footer %}
-	<button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Cancel" %}</button>
+	<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{% trans "Cancel" %}</button>
 {% endblock footer %}
