--- a/app/admin/template/financial/account/modal.edit_account.twig
+++ b/app/admin/template/financial/account/modal.edit_account.twig
@@ -4,83 +4,89 @@
 {% block body %}
 
 <form class="form-horizontal" action="/financial/account?action=edit&id={{ bank_account.id }}" method="post" id="frm_edit_account_{{ bank_account.id }}">
-	<div class="alert alert-danger hide">
-		{% trans "Some fields were not filled in correcty." %} {% trans "Please correct them in order to continue." %}
+	<div class="alert alert-danger" hidden>
+		<div class="alert-message">
+			{% trans "Some fields were not filled in correcty." %} {% trans "Please correct them in order to continue." %}
+		</div>
 	</div>
 
 	<input type="hidden" name="bank_account[id]" value="{{ bank_account.id }}" />
-	<div class="alert alert-info">{% trans "Your bank account needs to be linked to a bookkeeping account in order to make exports." %}</div>
+	<div class="alert alert-info">
+		<div class="alert-message">
+			{% trans "Your bank account needs to be linked to a bookkeeping account in order to make exports." %}
+		</div>
+	</div>
 
 	{% if bank_account.from_coda %}
-		<div class="form-group">
-			<label class="col-xs-4 control-label">{% trans "Name" %}</label>
-			<div class="col-xs-8">
-				<p class="form-control-static">{{ bank_account.name }}</p>
+		<div class="row mb-3">
+			<label class="col-4 col-form-label text-end">{% trans "Name" %}</label>
+			<div class="col-8">
+				<p class="form-control-plaintext">{{ bank_account.name }}</p>
 			</div>
 		</div>
 
-		<div class="form-group">
-			<label class="col-xs-4 control-label">{% trans "Description" %}</label>
-			<div class="col-xs-8">
-				<p class="form-control-static">{{ bank_account.description }}</p>
+		<div class="row mb-3">
+			<label class="col-4 col-form-label text-end">{% trans "Description" %}</label>
+			<div class="col-8">
+				<p class="form-control-plaintext">{{ bank_account.description }}</p>
 			</div>
 		</div>
 
-		<div class="form-group">
-			<label class="col-xs-4 control-label">{% trans "Number" %}</label>
-			<div class="col-xs-8">
-				<p class="form-control-static">{{ bank_account.number }}</p>
+		<div class="row mb-3">
+			<label class="col-4 col-form-label text-end">{% trans "Number" %}</label>
+			<div class="col-8">
+				<p class="form-control-plaintext">{{ bank_account.number }}</p>
 			</div>
 		</div>
 
-		<div class="form-group">
-			<label class="col-xs-4 control-label">{% trans "BIC" %}</label>
-			<div class="col-xs-8">
-				<p class="form-control-static">{{ bank_account.bic }}</p>
+		<div class="row mb-3">
+			<label class="col-4 col-form-label text-end">{% trans "BIC" %}</label>
+			<div class="col-8">
+				<p class="form-control-plaintext">{{ bank_account.bic }}</p>
 			</div>
 		</div>
 	{% else %}
 
-		<div class="form-group">
-			<label class="col-xs-4 control-label">{% trans "Name" %}</label>
-			<div class="col-xs-8">
+		<div class="row mb-3">
+			<label class="col-4 col-form-label text-end">{% trans "Name" %}</label>
+			<div class="col-8">
 				<input type="text" class="form-control" name="bank_account[name]" value="{{ bank_account.name }}" />
 			</div>
 		</div>
 
-		<div class="form-group">
-			<label class="col-xs-4 control-label">{% trans "Description" %}</label>
-			<div class="col-xs-8">
+		<div class="row mb-3">
+			<label class="col-4 col-form-label text-end">{% trans "Description" %}</label>
+			<div class="col-8">
 				<input type="text" class="form-control" name="bank_account[description]" value="{{ bank_account.description }}" />
 			</div>
 		</div>
 
-		<div class="form-group">
-			<label class="col-xs-4 control-label">{% trans "Number" %}</label>
-			<div class="col-xs-8">
+		<div class="row mb-3">
+			<label class="col-4 col-form-label text-end">{% trans "Number" %}</label>
+			<div class="col-8">
 				<input type="text" class="form-control" name="bank_account[number]" value="{{ bank_account.number }}" />
 			</div>
 		</div>
 
-		<div class="form-group">
-			<label class="col-xs-4 control-label">{% trans "BIC" %}</label>
-			<div class="col-xs-8">
+		<div class="row mb-3">
+			<label class="col-4 col-form-label text-end">{% trans "BIC" %}</label>
+			<div class="col-8">
 				<input type="text" class="form-control" name="bank_account[bic]" value="{{ bank_account.bic }}" />
 			</div>
 		</div>
 
 	{% endif %}
 
-	<div class="form-group">
-		<label class="col-xs-4 control-label">{% trans "Alias" %}</label>
-		<div class="col-xs-8">
+	<div class="row mb-3">
+		<label class="col-4 col-form-label text-end">{% trans "Alias" %}</label>
+		<div class="col-8">
 			<input type="text" class="form-control" name="bank_account[alias]" value="{{ bank_account.alias }}" />
 		</div>
 	</div>
 
-	<div class="form-group">
-		<label class="col-xs-4 control-label">{% trans "Bookkeeping account" %}</label>
-		<div class="col-xs-8">
+	<div class="row mb-3">
+		<label class="col-4 col-form-label text-end">{% trans "Bookkeeping account" %}</label>
+		<div class="col-8">
 			<select name="bank_account[bookkeeping_account_id]" class="form-control">
 				<option value="0">{% trans "Please select an account" %}</option>
 				{% for bookkeeping_account in bookkeeping_accounts %}
@@ -92,9 +98,9 @@
 		</div>
 	</div>
 
-	<div class="form-group">
-		<label class="col-xs-4 control-label">{% trans "Make default for payment" %}</label>
-		<div class="col-xs-8">
+	<div class="row mb-3">
+		<label class="col-4 col-form-label text-end">{% trans "Make default for payment" %}</label>
+		<div class="col-8">
 			<input type="checkbox" data-group-cls="btn-group-xs"  name="bank_account[default_for_payment]" {% if bank_account.default_for_payment %}checked{% endif %}>
 		</div>
 	</div>
@@ -108,8 +114,8 @@
 	function validate_bank_account_{{ bank_account.id }}() {
 		data = $('#frm_edit_account_{{ bank_account.id }}').serialize();
 
-		$('.form-group').removeClass('has-error');
-		$('#frm_edit_account_{{ bank_account.id }} .alert').addClass('hide');
+		$('.row mb-3').removeClass('has-error');
+		$('#frm_edit_account_{{ bank_account.id }} .alert').attr('hidden', true);
 		$.post('/financial/account?action=validate', data, function(data) {
 			// if (data === null) {
 			if (data.length === 0) {
@@ -117,9 +123,9 @@
 				$('#frm_edit_account_{{ bank_account.id }}').submit();
 				return true;
 			}
-			$('#frm_edit_account_{{ bank_account.id }} .alert').removeClass('hide');
+			$('#frm_edit_account_{{ bank_account.id }} .alert').removeAttr('hidden');
 			$.each(data, function(key, value) {
-				$('#frm_edit_account_{{ bank_account.id }} input[name="bank_account[' + key + ']"], #frm_edit_account_{{ bank_account.id }} select[name="bank_account[' + key + ']"]').parents('.form-group').addClass('has-error');
+				$('#frm_edit_account_{{ bank_account.id }} input[name="bank_account[' + key + ']"], #frm_edit_account_{{ bank_account.id }} select[name="bank_account[' + key + ']"]').parents('.row mb-3').addClass('has-error');
 			});
 
 			return false;
@@ -134,5 +140,5 @@
 
 {% block footer %}
 	<button type="submit" class="btn btn-primary" onclick="$(this).parents('.modal-content').find('form').submit();">{% trans "Save" %}</button>
-	<button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Cancel" %}</button>
+	<button type="button" class="btn btn-default" data-bs-dismiss="modal">{% trans "Cancel" %}</button>
 {% endblock footer %}
