--- a/app/admin/template/financial/account/transaction/modal.bookkeeping_account.twig
+++ b/app/admin/template/financial/account/transaction/modal.bookkeeping_account.twig
@@ -26,9 +26,9 @@
 
 <h5>2. {% trans "Search bookkeeping accounts" %}</h5>
 	<form action="{{ env.module.get_module_path() }}?action=edit&id={{ transaction.id }}" method="post" class="form-horizontal form-condensed" id="search_bookkeeping_accounts">
-	<div class="form-group">
-		<label class="col-xs-3 control-label">{% trans "Search bookkeeping account" %}</label>
-		<div class="col-xs-6">
+	<div class="row mb-3">
+		<label class="col-form-label col-3 text-end">{% trans "Search bookkeeping account" %}</label>
+		<div class="col-6">
 			<div class="input-group">
 				<input type="text" name="search" id="txt_search_bookkeeping_accounts" class="form-control" value="{{ transaction.get_message() }}" />
 				<span class="input-group-btn">
@@ -58,9 +58,9 @@
 		{% trans "There is a problem with the amounts you have entered." %} {% trans "The total amount cannot exceed the amount of the transaction" %}.
 	</div>
 
-	<div class="form-group">
-		<label class="col-xs-3 control-label">{% trans "Link with bookkeeping account" %}</label>
-		<div class="col-xs-4">
+	<div class="row mb-3">
+		<label class="col-form-label col-3 text-end">{% trans "Link with bookkeeping account" %}</label>
+		<div class="col-4">
 			<div class="input-group">
 				<span class="input-group-addon">&euro;</span>
 				<input type="text" class="form-control" id="link_bookkeeping_account_amount" style="width: 143px;" name="link_bookkeeping_account_amount" value="">
@@ -71,8 +71,8 @@
 		</div>
 	</div>
 
-	<div class="form-group">
-		<div class="col-xs-9 col-xs-offset-3">
+	<div class="row mb-3">
+		<div class="col-9 offset-3">
 			<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 		</div>
 	</div>
