--- a/app/admin/template/mobile/scan.twig
+++ b/app/admin/template/mobile/scan.twig
@@ -49,7 +49,7 @@
 		</div>
 
 		<div class="row">
-			<div class="col-xs-12 text-center" style="padding: 0;">
+			<div class="col-12 text-center" style="padding: 0;">
 				<canvas id="canvas" class="hidden" style="margin: auto auto;"></canvas>
 			</div>
 		</div>
