--- a/app/admin/template/sales/invoice/create/step1.twig
+++ b/app/admin/template/sales/invoice/create/step1.twig
@@ -33,12 +33,12 @@
 	<div class="card-body">
 		<form method="post" action="/sales/invoice?action=create_step1" class="form-horizontal" id="invoice-create-step1">
 			<div class="mb-3">
-				<label class="col-xs-3 form-label">{% trans "Customer" %}</label>
+				<label class="col-3 form-label">{% trans "Customer" %}</label>
 				<select name="customer_id" class="form-select autocomplete_customer"></select>
 			</div>
 
-			<div class="form-group">
-				<div class="col-xs-3 col-xs-offset-3">
+			<div class="row mb-3">
+				<div class="col-3 offset-3">
 					<button class="btn btn-primary">
 						{% trans "Next" %}
 					</button>
@@ -53,7 +53,7 @@ $('.autocomplete_customer').select2({
 	theme: "bootstrap-5",
 	ajax: {
 		url: '/administrative/customer?action=ajax_search',
-		dataType: 'json'
+		dataType: 'json',
     // Additional AJAX parameters go here; see the end of this chapter for the full code of this example
 	}
 });
