--- a/app/admin/template/sales/invoice/create/step3.twig
+++ b/app/admin/template/sales/invoice/create/step3.twig
@@ -273,9 +273,9 @@
 
 							</td>
 							<td>
-								<div class="form-control-static">
+								<div class="col-form-label">
 									<a href="javascript:void(0);" onclick="remove_item($(this));">
-										<span class="glyphicon glyphicon-remove"></span>
+										<i data-feather="trash-2"></i>
 									</a>
 								</div>
 							</td>
