--- a/app/admin/template/sales/invoice/queue/modal.customer_contacts.twig
+++ b/app/admin/template/sales/invoice/queue/modal.customer_contacts.twig
@@ -9,9 +9,9 @@
 <form action="/sales/invoice/queue?action=edit&id={{ invoice_queue.id }}" method="post">
 <div class="row">
 	{% for customer_contact in invoice_queue.customer.get_active_customer_contacts %}
-		<div class="col-xs-4 customer_contact" id="customer-contact-{{ customer_contact.id }}">
-			<div class="panel panel-default">
-				<div class="panel-body{% if invoice_queue.customer_contact_id == customer_contact.id %} bg-info{% endif %}">
+		<div class="col-4 customer_contact" id="customer-contact-{{ customer_contact.id }}">
+			<div class="card">
+				<div class="card-body{% if invoice_queue.customer_contact_id == customer_contact.id %} bg-info{% endif %}">
 					<div class="pull-left">
 						<input type="radio" name="customer_contact" {% if invoice_queue.customer_contact_id == customer_contact.id %}checked{% endif %}/>
 					</div>
@@ -29,8 +29,8 @@
 	$('.customer_contact').on({
 		click: function() {
 			$('.customer_contact').find('input[type=radio]').prop('checked', false);
-			$('.customer_contact').find('.panel-body').removeClass('bg-info');
-			$(this).find('.panel-body').first().addClass('bg-info');
+			$('.customer_contact').find('.card-body').removeClass('bg-info');
+			$(this).find('.card-body').first().addClass('bg-info');
 			$('#customer_contact_id').val($(this).prop('id').replace('customer-contact-', ''));
 			$(this).find('input[type=radio]').prop('checked', true);
 		}
@@ -40,6 +40,6 @@
 {% endblock body %}
 
 {% block footer %}
+	<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{% trans "Cancel" %}
 	<button type="submit" class="btn btn-primary" onclick="$(this).closest('.modal-content').find('form').submit();">{% trans "Save" %} </button>
-	<button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Cancel" %}
 {% endblock footer %}
