--- a/app/admin/template/sales/invoice/queue/recurring.twig
+++ b/app/admin/template/sales/invoice/queue/recurring.twig
@@ -25,18 +25,18 @@
 		<div class="col-md-6">
 			<form class="form-horizontal form-condensed" method="post" action="/sales/invoice/queue/recurring?action=edit&id={{ invoice_queue_recurring_group.id }}">
 
-			<div class="panel panel-default">
-				<div class="panel-heading">{% trans "Edit recurring invoice queue" %}</div>
-				<div class="panel-body">
-					<div class="form-group {% if errors.name is defined %}has-error{% endif %}">
-						<label class="col-xs-4 control-label">{% trans "Name" %}</label>
-						<div class="col-xs-8">
+			<div class="card">
+				<div class="card-header">{% trans "Edit recurring invoice queue" %}</div>
+				<div class="card-body">
+					<div class="row mb-3 {% if errors.name is defined %}has-error{% endif %}">
+						<label class="col-4 control-label">{% trans "Name" %}</label>
+						<div class="col-8">
 							<input type="text" class="form-control" id="alias" name="invoice_queue_recurring_group[name]" value="{{ invoice_queue_recurring_group.name }}">
 						</div>
 					</div>
-					<div class="form-group">
-						<label class="col-xs-4 control-label">{% trans "Repeat" %}</label>
-						<div class="col-xs-8">
+					<div class="row mb-3">
+						<label class="col-4 control-label">{% trans "Repeat" %}</label>
+						<div class="col-8">
 							<select class="form-control" name="invoice_queue_recurring_group[repeat_every]">
 								<option value="+1 day"{% if invoice_queue_recurring_group.repeat_every == '+1 day' %} selected="selected"{% endif %}>{% trans "Every day" %}</option>
 								<option value="+1 week"{% if invoice_queue_recurring_group.repeat_every == '+1 week' %} selected="selected"{% endif %}>{% trans "Every week" %}</option>
@@ -49,23 +49,23 @@
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-4 control-label">{% trans "Next run" %}</label>
-						<div class="col-xs-8">
+					<div class="row mb-3">
+						<label class="col-4 control-label">{% trans "Next run" %}</label>
+						<div class="col-8">
 							<input type="text" class="form-control datepicker" name="invoice_queue_recurring_group[next_run]" id="date_start" value="{{ invoice_queue_recurring_group.next_run }}">
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-4 control-label">{% trans "Run forever" %}</label>
-						<div class="col-xs-8"><input type="checkbox" id="run_forever" name="invoice_queue_recurring_group[run_forever]" data-group-cls="btn-group-xs" {% if invoice_queue_recurring_group.stop_after is null %}checked{% endif %} onchange="toggle_run_forever();"></div>
+					<div class="row mb-3">
+						<label class="col-4 control-label">{% trans "Run forever" %}</label>
+						<div class="col-8"><input type="checkbox" id="run_forever" name="invoice_queue_recurring_group[run_forever]" data-group-cls="btn-group-xs" {% if invoice_queue_recurring_group.stop_after is null %}checked{% endif %} onchange="toggle_run_forever();"></div>
 					</div>
 
 					<hr>
 
-					<div class="form-group" id="stop_after">
-						<label class="col-xs-4 control-label">{% trans "Stop after" %}</label>
-						<div class="col-xs-8">
+					<div class="row mb-3" id="stop_after">
+						<label class="col-4 control-label">{% trans "Stop after" %}</label>
+						<div class="col-8">
 							<input type="text" class="form-control datepicker" name="invoice_queue_recurring_group[stop_after]" value="{{ invoice_queue_recurring_group.stop_after }}">
 						</div>
 					</div>
@@ -81,17 +81,17 @@
 						toggle_run_forever();
 					</script>
 
-					<div class="form-group">
-						<label class="col-xs-4 control-label">{% trans "Direct invoice" %} ({% trans "Not via invoice queue" %})</label>
-						<div class="col-xs-8">
+					<div class="row mb-3">
+						<label class="col-4 control-label">{% trans "Direct invoice" %} ({% trans "Not via invoice queue" %})</label>
+						<div class="col-8">
 							<input type="checkbox" id="direct_invoice" name="invoice_queue_recurring_group[direct_invoice]" data-group-cls="btn-group-xs" {% if invoice_queue_recurring_group.direct_invoice %}checked{% endif %} onchange="toggle_direct_invoice();">
 						</div>
 					</div>
 
 					<div class="direct_invoice">
-						<div class="form-group">
-							<label class="col-xs-4 control-label">{% trans "Invoice expiration" %}</label>
-							<div class="col-xs-8">
+						<div class="row mb-3">
+							<label class="col-4 control-label">{% trans "Invoice expiration" %}</label>
+							<div class="col-8">
 								<select class="form-control" name="invoice_queue_recurring_group[direct_invoice_expiration_period]">
 									<option value="+2 weeks"{% if invoice_queue_recurring_group.direct_invoice_expiration_period == '+2 weeks' %} selected="selected"{% endif %}>
 										2 {% trans "weeks" %}
@@ -109,17 +109,17 @@
 							</div>
 						</div>
 
-						<div class="form-group">
-							<label class="col-xs-4 control-label">{% trans "Invoice reference" %}</label>
-							<div class="col-xs-8">
+						<div class="row mb-3">
+							<label class="col-4 control-label">{% trans "Invoice reference" %}</label>
+							<div class="col-8">
 								<input type="text" class="form-control" name="invoice_queue_recurring_group[direct_invoice_reference]" value="{{ invoice_queue_recurring_group.direct_invoice_reference }}">
 							</div>
 						</div>
 					</div>
 
-					<div class="form-group direct_invoice">
-						<label class="col-xs-4 control-label">{% trans "Send invoice after creation" %}</label>
-						<div class="col-xs-8">
+					<div class="row mb-3 direct_invoice">
+						<label class="col-4 control-label">{% trans "Send invoice after creation" %}</label>
+						<div class="col-8">
 							<input type="checkbox" name="invoice_queue_recurring_group[direct_invoice_send_invoice]" data-group-cls="btn-group-xs" {% if invoice_queue_recurring_group.direct_invoice_send_invoice %}checked{% endif %}>
 						</div>
 					</div>
@@ -135,15 +135,15 @@
 						toggle_direct_invoice();
 					</script>
 
-					<div class="form-group">
-						<label class="col-xs-4 control-label">{% trans "Created" %}</label>
-						<div class="col-xs-8">
+					<div class="row mb-3">
+						<label class="col-4 control-label">{% trans "Created" %}</label>
+						<div class="col-8">
 							<p class="form-control-static">{{ invoice_queue_recurring_group.created|date }}</p>
 						</div>
 					</div>
 
-					<div class="form-group">
-						<div class="col-xs-8 col-xs-offset-4">
+					<div class="row mb-3">
+						<div class="col-8 offset-4">
 							<button class="btn btn-primary" type="submit">{% trans "Save" %}</button>
 						</div>
 					</div>
@@ -158,19 +158,19 @@
 		{% include 'administrative/customer/modal.customer_contact.twig' with {'id': 'manage-customer-contact','redirect': '/sales/invoice/queue/recurring?action=edit&id=' ~ invoice_queue_recurring_group.id, 'modal_size': 'lg'} %}
 
 		<div class="col-md-6">
-			<div class="panel panel-default">
-				<div class="panel-heading">
+			<div class="card">
+				<div class="card-header">
 					{% trans "Invoice contact" %}
 					<div class="pull-right">
 						<a href="#change_customer_contact" data-toggle="modal">{% trans "Change customer contact" %}</a> /
 						<a href="#manage-customer-contact" data-toggle="modal" data-customer-contact-id="{{ invoice_queue_recurring_group.customer_contact_id }}">{% trans "Modify customer contact" %}</a>
 					</div>
 				</div>
-				<div class="panel-body">
+				<div class="card-body">
 					<form class="form-horizontal form-condensed" method="post" action="/sales/invoice/queue/recurring?action=edit&id={{ invoice_queue_recurring_group.id }}">
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Customer" %}</label>
-						<div class="col-xs-5">
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "Customer" %}</label>
+						<div class="col-5">
 							<p class="form-control-static">
 								<a href="/administrative/customer/detail?id={{ invoice_queue_recurring_group.customer_id }}">
 									{{ invoice_queue_recurring_group.customer.get_display_name() }}
@@ -179,9 +179,9 @@
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Invoice contact" %}</label>
-						<div class="col-xs-5">
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "Invoice contact" %}</label>
+						<div class="col-5">
 							{% set customer_contact = invoice_queue_recurring_group.customer_contact %}
 							<div class="form-control-static">
 								{{ base.customer_contact(customer_contact, settings) }}
@@ -196,8 +196,8 @@
 		</div>
 
 
-		<div class="panel panel-default">
-			<div class="panel-heading">
+		<div class="card">
+			<div class="card-header">
 				{% trans "Items" %}
 				<div class="pull-right">
 					<a href="javascript:add_queue_item();"">
@@ -205,7 +205,7 @@
 					</a>
 				</div>
 			</div>
-			<div class="panel-body">
+			<div class="card-body">
 			<form class="form-horizontal form-condensed" method="post" action="/sales/invoice/queue/recurring?action=edit&id={{ invoice_queue_recurring_group.id }}">
 				<table id="queue_items_table" class="table table-striped table-hover">
 					<thead>
@@ -252,7 +252,7 @@
 							</td>
 							<td>
 								<a href="javascript: void(0);" onclick="toggle_row({{ invoice_queue_recurring.id }});">
-									<span class="glyphicon glyphicon-pencil"></span>
+									<i data-feather="edit"></i>
 								</a>
 							</td>
 
@@ -273,7 +273,7 @@
 							<td>&euro;{{ invoice_queue_recurring.price|number_format }}</td>
 							<td>
 								<a href="javascript: void(0);" onclick="toggle_row({{ invoice_queue_recurring.id }});">
-									<span class="glyphicon glyphicon-pencil"></span>
+									<i data-feather="edit"></i>
 								</a>
 							</td>
 
@@ -298,8 +298,8 @@
 					</tbody>
 				</table>
 
-				<div class="col-xs-12">
-					<div class="form-group">
+				<div class="col-12">
+					<div class="row mb-3">
 						<div class="pull-right">
 							<button type="submit" class="btn btn-primary">
 								{% trans "Save" %}
@@ -379,9 +379,9 @@
 			<li><a href="?">{% trans "Recurring invoice queue" %}</a></li>
 			<li class="active">{% trans "Add invoice queue step 3" %}</li>
 		</ol>
-		<div class="panel panel-default">
-			<div class="panel-heading">{% trans "Step 3: Queue name and content" %}</div>
-			<div class="panel-body">
+		<div class="card">
+			<div class="card-header">{% trans "Step 3: Queue name and content" %}</div>
+			<div class="card-body">
 				<form class="form form-horizontal form-condensed" method="post" action="?action=add_step3">
 					<div class="alert alert-info" id="error" style="display: none;">{% trans "If you make any changes to this contact, existing invoices for this contact will retain the original contact-information" %}.</div>
 					{% if errors|length > 0 %}
@@ -389,15 +389,15 @@
 							{% trans "Some fields were filled in incorrectly." %} {% trans "Your modifications were not saved." %} {% trans "Please correct them and save again." %}
 						</div>
 					{% endif %}
-					<div class="form-group {% if errors.name is defined %}has-error{% endif %}">
-						<label class="col-xs-3 control-label">{% trans "Name" %}</label>
-						<div class="col-xs-5">
+					<div class="row mb-3 {% if errors.name is defined %}has-error{% endif %}">
+						<label class="col-form-label col-3 text-end">{% trans "Name" %}</label>
+						<div class="col-5">
 							<input type="text" class="form-control" name="invoice_queue_recurring_group[name]">
 						</div>
 					</div>
-					<div class="form-group {% if errors.repeat_every is defined %}has-error{% endif %}">
-						<label class="col-xs-3 control-label">{% trans "Repeat" %}</label>
-						<div class="col-xs-5">
+					<div class="row mb-3 {% if errors.repeat_every is defined %}has-error{% endif %}">
+						<label class="col-form-label col-3 text-end">{% trans "Repeat" %}</label>
+						<div class="col-5">
 							<select class="form-control" name="invoice_queue_recurring_group[repeat_every]">
 								<option value="+1 day">{% trans "Every day" %}</option>
 								<option value="+1 week">{% trans "Every week" %}</option>
@@ -409,9 +409,9 @@
 							</select>
 						</div>
 					</div>
-					<div class="form-group {% if errors.next_run is defined %}has-error{% endif %}">
-						<label class="col-xs-3 control-label">{% trans "Start date" %}</label>
-						<div class="col-xs-5">
+					<div class="row mb-3 {% if errors.next_run is defined %}has-error{% endif %}">
+						<label class="col-form-label col-3 text-end">{% trans "Start date" %}</label>
+						<div class="col-5">
 							<input type="datetime" class="form-control datepicker" name="invoice_queue_recurring_group[next_run]">
 						</div>
 					</div>
@@ -436,19 +436,19 @@
 		</div>
 		{% endif %}
 
-		<div class="panel panel-default">
-			<div class="panel-heading">
+		<div class="card">
+			<div class="card-header">
 				{% trans "Select a invoice contact" %}
 			</div>
-			<div class="panel-body">
+			<div class="card-body">
 				<div class="row">
 				{% for customer_contact in customer_contacts %}
-					<div class="col-xs-3 customer_contact" id="customer-contact-{{ customer_contact.id }}">
-						<div class="panel panel-default">
-							<div class="panel-body{% if customer_contacts|length == 1 %} bg-info{% endif %}">
+					<div class="col-3 customer_contact" id="customer-contact-{{ customer_contact.id }}">
+						<div class="card">
+							<div class="card-body{% if customer_contacts|length == 1 %} bg-info{% endif %}">
 								<div class="actions hide">
 									<a href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contact-id="{{ customer_contact.id }}">
-										<span class="glyphicon glyphicon-pencil"></span>
+										<i data-feather="edit"></i>
 									</a>
 									<a href="javascript:void(0);" onclick="delete_contact({{ customer_contact.id }})">
 										<span class="glyphicon glyphicon-remove"></span>
@@ -464,9 +464,9 @@
 						</div>
 					</div>
 				{% endfor %}
-				<div class="col-xs-3 customer_contact">
-					<div class="panel panel-default">
-						<div class="panel-body text-center">
+				<div class="col-3 customer_contact">
+					<div class="card">
+						<div class="card-body text-center">
 							<a class="btn btn-default" href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contacts="{{ customer_contacts|length }}">
 								{% trans "Create new" %}
 							</a>
@@ -503,8 +503,8 @@
 				},
 				click: function() {
 					$('.customer_contact').find('input[type=radio]').prop('checked', false);
-					$('.customer_contact').find('.panel-body').removeClass('bg-info');
-					$(this).find('.panel-body').first().addClass('bg-info');
+					$('.customer_contact').find('.card-body').removeClass('bg-info');
+					$(this).find('.card-body').first().addClass('bg-info');
 					$('input[name=customer_contact_id]').val($(this).prop('id').replace('customer-contact-', ''));
 					$(this).find('input[type=radio]').prop('checked', true);
 				}
@@ -531,13 +531,13 @@
 			<li><a href="?">{% trans "Recurring invoice queue" %}</a></li>
 			<li class="active">{% trans "Add invoice queue step 1" %}</li>
 		</ol>
-		<div class="panel panel-default">
-			<div class="panel-heading">{% trans "Step 1: Choose customer" %}</div>
-			<div class="panel-body">
+		<div class="card">
+			<div class="card-header">{% trans "Step 1: Choose customer" %}</div>
+			<div class="card-body">
 				<form class="form form-horizontal" method="post" action="?action=add_step1" class="form-horizontal">
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Customer" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "Customer" %}</label>
+						<div class="col-9">
 							<input type="text" id="autocomplete_customer" name="customer" class="form-control typeahead" value="{% if env.session.invoice.customer_id > 0 %}{{ env.session.invoice.customer.firstname }} {{ env.session.invoice.customer.lastname }}{% endif %}" placeholder="{% trans "Search customer" %}...">
 							<input type="hidden" id="customer_id" name="customer_id" value="{% if env.session.invoice.customer_id > 0 %}{{ env.session.invoice.customer.id }}{% endif %}">
 						</div>
@@ -556,8 +556,8 @@
 		</ol>
 
 		<form class="form-horizontal" method="post" action="/sales/invoice/queue/recurring">
-			<div class="panel panel-default">
-				<div class="panel-heading">
+			<div class="card">
+				<div class="card-header">
 					{% trans "Filter" %}
 
 					<span class="pull-right">
@@ -567,17 +567,17 @@
 					</span>
 
 				</div>
-				<div class="panel-body">
-					<div class="form-group">
-						<label class="control-label col-xs-3">{% trans "Search" %}</label>
-							<div class="col-xs-5">
+				<div class="card-body">
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "Search" %}</label>
+							<div class="col-5">
 							<input type="text" class="form-control" name="search" value="{{ pager.get_search() }}" data-default="" />
 						</div>
 					</div>
 
 
-					<div class="form-group">
-						<div class="controls col-xs-offset-3 col-xs-5">
+					<div class="row mb-3">
+						<div class="controls offset-3 col-5">
 							<button class="btn btn-primary" type="submit">
 								{% trans "Search" %}
 							</button>
@@ -593,11 +593,11 @@
 
 		{% for queue in pager.items %}
 			{% if loop.first %}
-			<div class="panel panel-default">
-				<div class="panel-heading">
+			<div class="card">
+				<div class="card-header">
 					{{ base.pager_count(pager.item_count) }}
 				</div>
-				<div class="panel-body">
+				<div class="card-body">
 					<table class="table table-striped table-hover table-condensed">
 					<thead>
 						<tr>
@@ -629,12 +629,12 @@
 				<td>&nbsp;</td>
 				<td>
 					<a href="/sales/invoice/queue/recurring?action=edit&id={{ queue.id }}">
-						<span class="glyphicon glyphicon-pencil"></span>
+						<i data-feather="edit"></i>
 					</a>
 				</td>
 				<td>
 					<a href="/sales/invoice/queue/recurring?action=delete&id={{ queue.id }}" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure you want to delete the recurring invoice queue selected" %}?">
-						<span class="glyphicon glyphicon-remove" /></span>
+						<i data-feather="trash-2"></i></span>
 					</a>
 				</td>
 			</tr>
