--- a/app/admin/template/setting/configuration.twig
+++ b/app/admin/template/setting/configuration.twig
@@ -4,39 +4,40 @@
 
 {% block content %}
 
-<ol class="breadcrumb">
-	<li><a href="/">{% trans "Home" %}</a></li>
-	<li>{% trans "Settings" %}</li>
-	<li class="active">{% trans "Configuration" %}</li>
-</ol>
+<div class="row">
+	<div class="col">
+		<h4>{% trans "Configuration" %}</h4>
+	</div>
+</div>
 
 {% if env.sticky_session.message is defined %}
-{{ base.display_flash_message(env.sticky_session.message, 'configuration') }}
+	{{ base.display_flash_message(env.sticky_session.message, 'configuration') }}
 {% endif %}
 
-<form action="/setting/configuration" method="post" class="form-condensed form-horizontal">
-	<div class="panel panel-default">
-		<div class="panel-heading">{% trans "Invoice delivery" %}</div>
-		<div class="panel-body">
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Archive mailbox" %}</label>
-				<div class="col-xs-9">
-					<input type="text" name="setting[archive_mailbox]" class="form-control"
-						value="{{ settings.archive_mailbox }}">
+<form action="/setting/configuration" method="post">
+	<div class="card mb-3">
+		<div class="card-header">{% trans "Invoice delivery" %}</div>
+		<div class="card-body">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Archive mailbox" %}</label>
+				<div class="col-9">
+					<input type="text" name="setting[archive_mailbox]" class="form-control"	value="{{ settings.archive_mailbox }}">
 				</div>
 			</div>
 
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Enable invoice reminders" %}</label>
-				<div class="col-xs-9">
-					<input type="checkbox" data-group-cls="btn-group-xs" name="setting[enable_invoice_reminder]" {% if
-						settings.enable_invoice_reminder %}checked{% endif %}>
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Enable invoice reminders" %}</label>
+				<div class="col-9">
+					<div class="form-check form-switch form-control-plaintext">
+						<input type="checkbox" data-group-cls="btn-group-xs" name="setting[enable_invoice_reminder]" {% if
+							settings.enable_invoice_reminder %}checked{% endif %} class="form-check-input">
+					</div>
 				</div>
 			</div>
 
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Invoice reminder email window" %}</label>
-				<div class="col-xs-9">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Invoice reminder email window" %}</label>
+				<div class="col-9">
 					<div class="input-group">
 						<input type="number" name="setting[invoice_reminder_email_window]" class="form-control"
 							value="{{ settings.invoice_reminder_email_window }}">
@@ -47,34 +48,38 @@
 				</div>
 			</div>
 
-			<div class="form-group click_post_option hidden">
-				<label class="col-xs-3 control-label">{% trans "Click & Post username" %}</label>
-				<div class="col-xs-9">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Enable Click & Post" %}</label>
+				<div class="col-9">
+					<div class="form-check form-switch form-control-plaintext">				
+						<input type="checkbox" id="chk_enable_click_post" data-group-cls="btn-group-xs"
+							name="setting[enable_click_post]" {% if settings.enable_click_post %}checked{% endif %}
+							onchange="toggle_click_post();" class="form-check-input">
+					</div>
+				</div>
+			</div>			
+
+			<div class="row mb-3 click_post_option d-none">
+				<label class="col-form-label col-3 text-end">{% trans "Click & Post username" %}</label>
+				<div class="col-9">
 					<input type="text" class="form-control" name="setting[click_post_username]"
 						value="{{ settings.click_post_username }}" />
 				</div>
 			</div>
 
-			<div class="form-group click_post_option hidden">
-				<label class="col-xs-3 control-label">{% trans "Click & Post password" %}</label>
-				<div class="col-xs-9">
+			<div class="row mb-3 click_post_option d-none">
+				<label class="col-form-label col-3 text-end">{% trans "Click & Post password" %}</label>
+				<div class="col-9">
 					<input type="text" class="form-control" name="setting[click_post_password]"
 						value="{{ settings.click_post_password }}" />
 				</div>
 			</div>
 
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Enable Click & Post" %}</label>
-				<div class="col-xs-9">
-					<input type="checkbox" id="chk_enable_click_post" data-group-cls="btn-group-xs"
-						name="setting[enable_click_post]" {% if settings.enable_click_post %}checked{% endif %}
-						onchange="toggle_click_post();">
-				</div>
-			</div>
 
-			<div class="form-group{% if 'file_id' in errors|keys %} has-error{% endif %}">
-				<label for="file_id" class="col-xs-3 control-label">{% trans "Conditions file" %}</label>
-				<div class="col-xs-9">
+
+			<div class="row mb-3{% if 'file_id' in errors|keys %} has-error{% endif %}">
+				<label for="file_id" class="col-form-label col-3 text-end">{% trans "Conditions file" %}</label>
+				<div class="col-9">
 					<div id="document-file" class="form-control-static hide">
 						{% if file.id > 0 %}
 						<div class="file">
@@ -110,8 +115,8 @@
 				</div>
 			</div>
 
-			<div class="form-group">
-				<div class="col-xs-9 col-xs-offset-3">
+			<div class="row mb-3">
+				<div class="col-9 offset-3">
 					<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 				</div>
 			</div>
@@ -122,20 +127,20 @@
 	<script type="text/javascript">
 		function toggle_click_post() {
 			if ($('#chk_enable_click_post').is(':checked')) {
-				$('.click_post_option').removeClass('hidden');
+				$('.click_post_option').removeClass('d-none');
 			} else {
-				$('.click_post_option').addClass('hidden');
+				$('.click_post_option').addClass('d-none');
 			}
 		}
 		toggle_click_post();
 	</script>
 
-	<div class="panel panel-default">
-		<div class="panel-heading">{% trans "Skins" %}</div>
-		<div class="panel-body">
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Email skin" %}</label>
-				<div class="col-xs-9">
+	<div class="card mb-3">
+		<div class="card-header">{% trans "Skins" %}</div>
+		<div class="card-body">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Email skin" %}</label>
+				<div class="col-9">
 					<select name="setting[skin_email_id]" class="form-control">
 						{% for skin_email in skin_emails %}
 						<option value="{{ skin_email.id }}" {% if skin_email.id==settings.skin_email_id %}selected{%
@@ -145,9 +150,9 @@
 				</div>
 			</div>
 
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Pdf skin" %}</label>
-				<div class="col-xs-9">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Pdf skin" %}</label>
+				<div class="col-9">
 					<select name="setting[skin_pdf_id]" class="form-control">
 						{% for skin_pdf in skin_pdfs %}
 						<option value="{{ skin_pdf.id }}" {% if skin_pdf.id==settings.skin_pdf_id %}selected{% endif %}>
@@ -157,8 +162,8 @@
 				</div>
 			</div>
 
-			<div class="form-group">
-				<div class="col-xs-9 col-xs-offset-3">
+			<div class="row mb-3">
+				<div class="col-9 offset-3">
 					<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 				</div>
 			</div>
@@ -167,27 +172,27 @@
 	</div>
 
 
-	<div class="panel panel-default">
-		<div class="panel-heading">{% trans "Object indentifiers" %}</div>
-		<div class="panel-body">
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Customer identifier" %}</label>
-				<div class="col-xs-9">
+	<div class="card mb-3">
+		<div class="card-header">{% trans "Object indentifiers" %}</div>
+		<div class="card-body">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Customer identifier" %}</label>
+				<div class="col-9">
 					<input type="text" class="form-control" name="setting[customer_identifier]"
 						value="{{ settings.customer_identifier }}" />
 				</div>
 			</div>
 
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Customer contact identifier" %}</label>
-				<div class="col-xs-9">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Customer contact identifier" %}</label>
+				<div class="col-9">
 					<input type="text" class="form-control" name="setting[customer_contact_identifier]"
 						value="{{ settings.customer_contact_identifier }}" />
 				</div>
 			</div>
 
-			<div class="form-group">
-				<div class="col-xs-9 col-xs-offset-3">
+			<div class="row mb-3">
+				<div class="col-9 offset-3">
 					<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 				</div>
 			</div>
@@ -195,12 +200,12 @@
 		</div>
 	</div>
 
-	<div class="panel panel-default">
-		<div class="panel-heading">{% trans "Bookkeeping" %}</div>
-		<div class="panel-body">
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Start fiscal year" %}</label>
-				<div class="col-xs-9">
+	<div class="card mb-3">
+		<div class="card-header">{% trans "Bookkeeping" %}</div>
+		<div class="card-body">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Start fiscal year" %}</label>
+				<div class="col-9">
 					<select name="setting[bookkeeping_start_month]" class="form-control">
 						{% for i in 1..12 %}
 						<option value="{{ i }}" {% if settings.bookkeeping_start_month==i %}selected{% endif %}>{{
@@ -211,9 +216,9 @@
 				</div>
 			</div>
 
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "VAT calculation" %}</label>
-				<div class="col-xs-9">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "VAT calculation" %}</label>
+				<div class="col-9">
 					<select name="setting[bookkeeping_vat_period]" class="form-control">
 						<option value="month" {% if settings.bookkeeping_vat_period=='month' %}selected{% endif %}>{%
 							trans "Monthly" %}</option>
@@ -223,24 +228,24 @@
 				</div>
 			</div>
 
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Centralization account customer" %}</label>
-				<div class="col-xs-9">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Centralization account customer" %}</label>
+				<div class="col-9">
 					<input type="text" class="form-control" name="setting[expertm.centralization_account_customer]"
 						value="{{ settings['expertm.centralization_account_customer'] }}">
 				</div>
 			</div>
 
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Centralization account sale" %}</label>
-				<div class="col-xs-9">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Centralization account sale" %}</label>
+				<div class="col-9">
 					<input type="text" class="form-control" name="setting[expertm.centralization_account_sale]"
 						value="{{ settings['expertm.centralization_account_sale'] }}">
 				</div>
 			</div>
 
-			<div class="form-group">
-				<div class="col-xs-9 col-xs-offset-3">
+			<div class="row mb-3">
+				<div class="col-9 offset-3">
 					<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 				</div>
 			</div>
@@ -249,29 +254,31 @@
 	</div>
 
 
-	<div class="panel panel-default">
-		<div class="panel-heading">{% trans "Coda files" %}</div>
-		<div class="panel-body">
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Fetch CODA files from" %} <a
+	<div class="card">
+		<div class="card-header">{% trans "Coda files" %}</div>
+		<div class="card-body">
+			<div class="row mb-3">
+				<label class="col-form-label col-3 text-end">{% trans "Fetch CODA files from" %} <a
 						href="https://codabox.tigron.net" target="new">https://codabox.tigron.net</a></label>
-				<div class="col-xs-9">
+				<div class="col-9">
+					<div class="form-check form-switch form-control-plaintext">				
 					<input type="checkbox" data-group-cls="btn-group-xs" id="chk_enable_codabox"
 						name="setting[enable_codabox]" {% if settings.enable_codabox %}checked{% endif %}
-						onchange="toggle_codabox();">
+						onchange="toggle_codabox();" class="form-check-input">
+					</div>
 				</div>
 			</div>
 
-			<div class="form-group codabox_option hidden">
-				<label class="col-xs-3 control-label">{% trans "API Key" %}</label>
-				<div class="col-xs-9">
+			<div class="row mb-3 codabox_option d-none">
+				<label class="col-form-label col-3 text-end">{% trans "API Key" %}</label>
+				<div class="col-9">
 					<input type="text" class="form-control" name="setting[tigron_api_key]"
 					value="{{ settings.tigron_api_key }}" />
 				</div>
 			</div>
 
-			<div class="form-group">
-				<div class="col-xs-9 col-xs-offset-3">
+			<div class="row mb-3">
+				<div class="col-9 offset-3">
 					<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 				</div>
 			</div>
@@ -283,9 +290,9 @@
 	<script type="text/javascript">
 		function toggle_codabox() {
 			if ($('#chk_enable_codabox').is(':checked')) {
-				$('.codabox_option').removeClass('hidden');
+				$('.codabox_option').removeClass('d-none');
 			} else {
-				$('.codabox_option').addClass('hidden');
+				$('.codabox_option').addClass('d-none');
 			}
 		}
 		toggle_codabox();
@@ -330,7 +337,7 @@
 						$("#document-file").append(template(response));
 						$('#document-dropzone').hide();
 						$('#document-file').find('.help-block').remove();
-						$('#document-file').closest('.form-group').removeClass('has-error');
+						$('#document-file').closest('.row mb-3').removeClass('has-error');
 						$('#document-file').removeClass('hide');
 					}
 					catch (e) {
