--- a/app/admin/template/setting/extractor/pdf/fingerprint.twig
+++ b/app/admin/template/setting/extractor/pdf/fingerprint.twig
@@ -9,14 +9,14 @@
 	<li class="active">{% trans "Manage fingerprints" %}</li>
 </ol>
 
-<div class="panel panel-default">
-	<div class="panel-heading">{% trans "Manage fingerprints" %}</div>
-	<div class="panel-body">
-		<div class="form-group">
-			<div class="col-xs-8">
+<div class="card">
+	<div class="card-header">{% trans "Manage fingerprints" %}</div>
+	<div class="card-body">
+		<div class="row mb-3">
+			<div class="col-8">
 				<img src="/picture?id={{ extractor_pdf.document.preview_file_id }}" />
 			</div>
-			<div class="col-xs-4" id="fingerprints">
+			<div class="col-4" id="fingerprints">
 
 			</div>
 		</div>
