--- a/app/admin/template/setting/extractor/transaction.twig
+++ b/app/admin/template/setting/extractor/transaction.twig
@@ -21,47 +21,47 @@
 			{{ base.display_flash_message(env.sticky_session.message, 'extractor') }}
 		{% endif %}
 
-		<div class="panel panel-default">
-			<div class="panel-heading">
+		<div class="card">
+			<div class="card-header">
 				{% trans "Details" %}
 			</div>
-			<div class="panel-body">
+			<div class="card-body">
 				<form class="form form-horizontal form-condensed" method="post" action="/setting/extractor/transaction?action=edit&id={{ extractor.id }}">
 
-					<div class="form-group{% if 'name' in errors|keys %} has-error{% endif %}">
-						<label for="name" class="col-xs-3 control-label">{% trans "Name" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'name' in errors|keys %} has-error{% endif %}">
+						<label for="name" class="col-form-label col-3 text-end">{% trans "Name" %}</label>
+						<div class="col-9">
 							<input type="text" name="extractor[name]" id="name" class="form-control" value="{{ extractor.name }}">
 							{{ form.invalid_input('name', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'fingerprint_message' in errors|keys %} has-error{% endif %}">
-						<label for="fingerprint_message" class="col-xs-3 control-label">{% trans "Message contains" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'fingerprint_message' in errors|keys %} has-error{% endif %}">
+						<label for="fingerprint_message" class="col-form-label col-3 text-end">{% trans "Message contains" %}</label>
+						<div class="col-9">
 							<input type="text" name="extractor[fingerprint_message]" id="fingerprint_message" class="form-control" value="{{ extractor.fingerprint_message }}">
 							{{ form.invalid_input('fingerprint_message', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'fingerprint_other_account_name' in errors|keys %} has-error{% endif %}">
-						<label for="fingerprint_other_account_name" class="col-xs-3 control-label">{% trans "Other name contains" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'fingerprint_other_account_name' in errors|keys %} has-error{% endif %}">
+						<label for="fingerprint_other_account_name" class="col-form-label col-3 text-end">{% trans "Other name contains" %}</label>
+						<div class="col-9">
 							<input type="text" name="extractor[fingerprint_other_account_name]" id="fingerprint_other_account_name" class="form-control" value="{{ extractor.fingerprint_other_account_name }}">
 							{{ form.invalid_input('fingerprint_other_account_name', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'fingerprint_other_account_number' in errors|keys %} has-error{% endif %}">
-						<label for="fingerprint_other_account_number" class="col-xs-3 control-label">{% trans "Other account number contains" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'fingerprint_other_account_number' in errors|keys %} has-error{% endif %}">
+						<label for="fingerprint_other_account_number" class="col-form-label col-3 text-end">{% trans "Other account number contains" %}</label>
+						<div class="col-9">
 							<input type="text" name="extractor[fingerprint_other_account_number]" id="fingerprint_other_account_number" class="form-control" value="{{ extractor.fingerprint_other_account_number }}">
 							{{ form.invalid_input('fingerprint_other_account_number', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group">
-						<div class="col-xs-3 col-xs-offset-3">
+					<div class="row mb-3">
+						<div class="col-3 offset-3">
 							<button class="btn btn-primary">
 								{% trans "Save" %}
 							</button>
@@ -72,10 +72,10 @@
 		</div>
 
 		<div class="row">
-			<div class="col-xs-6">
-				<div class="panel panel-default">
-					<div class="panel-heading">{% trans "Transaction information" %}</div>
-					<div class="panel-body">
+			<div class="col-6">
+				<div class="card">
+					<div class="card-header">{% trans "Transaction information" %}</div>
+					<div class="card-body">
 						{% if extractor.bank_account_statement_transaction_id > 0 %}
 							<pre>{{ extractor.bank_account_statement_transaction|print_r }}</pre>
 						{% else %}
@@ -85,7 +85,7 @@
 				</div>
 			</div>
 
-			<div class="col-xs-6">
+			<div class="col-6">
 				<div class="alert alert-info">
 					<p>
 					{% trans "Variable $transaction is available." %} {% trans "Please use"%} <b>$transaction->add_link($object, $amount);</b> {% trans "to link the transaction amount to the object." %}
@@ -95,22 +95,22 @@
 					{% trans "If no link is possible, return false" %}
 				</div>
 				<div class="alert alert-danger hide" id="eval_error"></div>
-				<div class="form-group">
+				<div class="row mb-3">
 					<textarea class="form-control autogrow code" id="eval">{{ extractor.eval }}</textarea>
 				</div>
-				<div class="form-group">
+				<div class="row mb-3">
 					<button type="button" class="btn btn-primary" onclick="run_eval();">{% trans "Run" %}</button>
 				</div>
 
-				<div class="form-group hide" id="parsed_content">
-					<div class="panel panel-default">
-						<div class="panel-heading">{% trans "Data" %}</div>
-						<div class="panel-body" id="data"></div>
+				<div class="row mb-3 hide" id="parsed_content">
+					<div class="card">
+						<div class="card-header">{% trans "Data" %}</div>
+						<div class="card-body" id="data"></div>
 					</div>
 
-					<div class="panel panel-default">
-						<div class="panel-heading">{% trans "Output" %}</div>
-						<div class="panel-body" id="output"></div>
+					<div class="card">
+						<div class="card-header">{% trans "Output" %}</div>
+						<div class="card-body" id="output"></div>
 					</div>
 				</div>
 			</div>
@@ -173,75 +173,75 @@
 			</div>
 		{% endif %}
 
-		<div class="panel panel-default">
-			<div class="panel-heading">
+		<div class="card">
+			<div class="card-header">
 				{% trans "Details" %}
 			</div>
-			<div class="panel-body">
+			<div class="card-body">
 				<form class="form form-horizontal form-condensed" method="post" action="/setting/extractor/transaction?action=add">
 					<input type="hidden" name="extractor[bank_account_statement_transaction_id]" value="{{ transaction.id }}" />
 					<div class="alert alert-info">
 						{% trans "You are about to create an extractor for the following bank account transaction" %}:
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Transaction to" %}</label>
-						<div class="col-xs-9"><p class="form-control-static">{{ transaction.other_account_name }}</div>
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "Transaction to" %}</label>
+						<div class="col-9"><p class="form-control-static">{{ transaction.other_account_name }}</div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Account number" %}</label>
-						<div class="col-xs-9"><p class="form-control-static">{{ transaction.other_account_number|iban_to_human_format }}</div>
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "Account number" %}</label>
+						<div class="col-9"><p class="form-control-static">{{ transaction.other_account_number|iban_to_human_format }}</div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Transaction message" %}</label>
-						<div class="col-xs-9"><p class="form-control-static">
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "Transaction message" %}</label>
+						<div class="col-9"><p class="form-control-static">
 						{% if transaction.structured_message != '' %}{{ transaction.structured_message }}{% else %}{{ transaction.message }}{% endif %}
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Amount" %}</label>
-						<div class="col-xs-9"><p class="form-control-static">&euro;{{ transaction.amount }}</div>
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "Amount" %}</label>
+						<div class="col-9"><p class="form-control-static">&euro;{{ transaction.amount }}</div>
 					</div>
 
 					<hr />
 
-					<div class="form-group{% if 'name' in errors|keys %} has-error{% endif %}">
-						<label for="name" class="col-xs-3 control-label">{% trans "Name" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'name' in errors|keys %} has-error{% endif %}">
+						<label for="name" class="col-form-label col-3 text-end">{% trans "Name" %}</label>
+						<div class="col-9">
 							<input type="text" name="extractor[name]" id="name" class="form-control" value="{{ env.post.extractor.name }}">
 							{{ form.invalid_input('name', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'fingerprint_message' in errors|keys %} has-error{% endif %}">
-						<label for="fingerprint_message" class="col-xs-3 control-label">{% trans "Message contains" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'fingerprint_message' in errors|keys %} has-error{% endif %}">
+						<label for="fingerprint_message" class="col-form-label col-3 text-end">{% trans "Message contains" %}</label>
+						<div class="col-9">
 							<input type="text" name="extractor[fingerprint_message]" id="fingerprint_message" class="form-control" value="{{ env.post.extractor.fingerprint_message }}">
 							{{ form.invalid_input('fingerprint_message', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'fingerprint_other_account_name' in errors|keys %} has-error{% endif %}">
-						<label for="fingerprint_other_account_name" class="col-xs-3 control-label">{% trans "Other name contains" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'fingerprint_other_account_name' in errors|keys %} has-error{% endif %}">
+						<label for="fingerprint_other_account_name" class="col-form-label col-3 text-end">{% trans "Other name contains" %}</label>
+						<div class="col-9">
 							<input type="text" name="extractor[fingerprint_other_account_name]" id="fingerprint_other_account_name" class="form-control" value="{{ env.post.extractor.fingerprint_other_account_name }}">
 							{{ form.invalid_input('fingerprint_other_account_name', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'fingerprint_other_account_number' in errors|keys %} has-error{% endif %}">
-						<label for="fingerprint_other_account_number" class="col-xs-3 control-label">{% trans "Other account number contains" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'fingerprint_other_account_number' in errors|keys %} has-error{% endif %}">
+						<label for="fingerprint_other_account_number" class="col-form-label col-3 text-end">{% trans "Other account number contains" %}</label>
+						<div class="col-9">
 							<input type="text" name="extractor[fingerprint_other_account_number]" id="fingerprint_other_account_number" class="form-control" value="{{ env.post.extractor.fingerprint_other_account_number }}">
 							{{ form.invalid_input('fingerprint_other_account_number', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group">
-						<div class="col-xs-3 col-xs-offset-3">
+					<div class="row mb-3">
+						<div class="col-3 offset-3">
 							<button class="btn btn-primary">
 								{% trans "Save" %}
 							</button>
@@ -268,20 +268,20 @@
 			{{ base.display_flash_message(env.sticky_session.message, 'extractor') }}
 		{% endif %}
 
-		<div class="panel panel-default">
-			<div class="panel-heading">
+		<div class="card">
+			<div class="card-header">
 				{% trans "Filter" %}
 			</div>
-			<div class="panel-body">
+			<div class="card-body">
 				<form method="post" action="/setting/extractor/transaction" class="form-horizontal">
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Search" %}</label>
-						<div class="col-xs-5">
+					<div class="row mb-3">
+						<label class="col-form-label col-3 text-end">{% trans "Search" %}</label>
+						<div class="col-5">
 							<input type="text" name="search" class="form-control" value="{{ pager.get_search() }}">
 						</div>
 					</div>
-					<div class="form-group">
-						<div class="col-xs-3 col-xs-offset-3">
+					<div class="row mb-3">
+						<div class="col-3 offset-3">
 							<button class="btn btn-primary">
 								{% trans "Search" %}
 							</button>
@@ -291,11 +291,11 @@
 			</div>
 		</div>
 
-		<div class="panel panel-default">
-			<div class="panel-heading">
+		<div class="card">
+			<div class="card-header">
 				{{ base.pager_count(pager.item_count) }}
 			</div>
-			<div class="panel-body">
+			<div class="card-body">
 			{% for extractor in pager.items %}
 				{% if loop.first %}
 					<table class="table table-hover table-striped table-condensed table-responsive">
@@ -324,12 +324,12 @@
 
 						<td>
 							<a href="/setting/extractor/transaction?action=edit&id={{ extractor.id }}" title="">
-								<span class="glyphicon glyphicon-pencil"></span>
+								<i data-feather="edit"></i>
 							</a>
 						</td>
 						<td>
 							<a href="/setting/extractor/transaction?id={{ extractor.id }}&action=delete" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure you want to remove this extractor?" %}">
-								<span class="glyphicon glyphicon-remove" />
+								<i data-feather="trash-2"></i>
 							</a>
 						</td>
 					</tr>
