--- a/app/admin/template/setting/mailscanner.twig
+++ b/app/admin/template/setting/mailscanner.twig
@@ -4,72 +4,73 @@
 
 {% block content %}
 
-	<ol class="breadcrumb">
-		<li><a href="/">{% trans "Home" %}</a></li>
-		<li>{% trans "Settings" %}</li>
-		<li class="active">{% trans "Mailscanner settings" %}</li>
-	</ol>
+	<div class="row">
+		<div class="col">
+			<h4>{% trans "Mailscanner settings" %}</h4>
+		</div>
+	</div>
 
-	{% if env.sticky_session.message is defined %}
-		{{ base.display_flash_message(env.sticky_session.message, 'settings') }}
-	{% endif %}
+	<div class="card">
+		<div class="card-header">{% trans "Mailscanner Settings" %}</div>
+		<div class="card-body">
+			{% if env.sticky_session.message is defined %}
+				{{ base.alert('success', 'Settings successfully updated'|trans) }}
+			{% endif %}
 
-	<div class="panel panel-default">
-		<div class="panel-heading">{% trans "Mailscanner Settings" %}</div>
-		<div class="panel-body">
 			<form action="/setting/mailscanner" method="post" class="form-horizontal form-condensed">
-				<div class="form-group">
-					<label class="control-label col-xs-3">{% trans "IMAP server" %}</label>
-					<div class="col-xs-9">
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "IMAP server" %}</label>
+					<div class="col-9">
 						<input type="text" class="form-control" name="setting[mailscanner_host]" value="{{ settings.mailscanner_host }}" />
 					</div>
 				</div>
 
-				<div class="form-group">
-					<label class="control-label col-xs-3">{% trans "IMAP username" %}</label>
-					<div class="col-xs-9">
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "IMAP username" %}</label>
+					<div class="col-9">
 						<input type="text" class="form-control" name="setting[mailscanner_username]" value="{{ settings.mailscanner_username }}" />
 					</div>
 				</div>
 
-				<div class="form-group">
-					<label class="control-label col-xs-3">{% trans "IMAP password" %}</label>
-					<div class="col-xs-9">
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "IMAP password" %}</label>
+					<div class="col-9">
 						<input type="text" class="form-control" name="setting[mailscanner_password]" value="{{ settings.mailscanner_password }}" />
 					</div>
 				</div>
 
-				<div class="form-group">
-					<label class="col-xs-3 control-label">{% trans "Mailbox status" %}</label>
-					<div class="col-xs-9">
-						<p class="form-control-static">
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "Mailbox status" %}</label>
+					<div class="col-9">
+						<p class="form-control-plaintext">
 						{% if imap_status == 'ok' %}
-							<span class="label label-success">{% trans "Connected" %}</span>
+							<span class="badge text-bg-success">{% trans "Connected" %}</span>
 						{% else %}
-							<span class="label label-danger">{% trans "Not connected" %}</span>
+							<span class="badge text-bg-danger">{% trans "Not connected" %}</span>
 						{% endif %}
 						</p>
 					</div>
 				</div>
 
-				<div class="form-group">
-					<label class="control-label col-xs-3">{% trans "Last check" %}</label>
-					<div class="col-xs-9">
-						<p class="form-control-static">
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "Last check" %}</label>
+					<div class="col-9">
+						<p class="form-control-plaintext">
 							{% if settings.mailscanner_last_check is defined %}{{ settings.mailscanner_last_check|datetime }}{% else %}{% trans "Never" %}{% endif %}
 						</p>
 					</div>
 				</div>
 
-				<div class="form-group">
-					<label class="col-xs-3 control-label">{% trans "Keep mails in mailbox" %}</label>
-					<div class="col-xs-9">
-						<input type="checkbox" name="setting[mailscanner_archive]" {% if settings.mailscanner_archive %}checked{% endif %} data-group-cls="btn-group-xs">
+				<div class="row mb-3">
+					<label class="col-form-label col-3 text-end">{% trans "Keep mails in mailbox" %}</label>
+					<div class="col-9">
+						<div class="form-check form-switch form-control-plaintext">
+							<input type="checkbox" name="setting[mailscanner_archive]" {% if settings.mailscanner_archive %}checked{% endif %} data-group-cls="btn-group-xs" class="form-check-input">
 					</div>
 				</div>
 
-				<div class="form-group">
-					<div class="col-xs-9 col-xs-offset-3">
+				<div class="row mb-3">
+					<div class="col-9 offset-3">
 						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 					</div>
 				</div>
