--- a/app/admin/template/user.twig
+++ b/app/admin/template/user.twig
@@ -7,11 +7,27 @@
 
 	{% if action == 'edit' %}
 
-		<ol class="breadcrumb">
-			<li><a href="/">{% trans "Home" %}</a></li>
-			<li><a href="/user">{% trans "Users" %}</a></li>
-			<li class="active">{% trans "Edit user" %}</li>
-		</ol>
+		<div class="row">
+			<div class="col">
+				<h4>{% trans "Users" %}</h4>
+			</div>
+			<div class="col">
+				<div class="float-end">
+					<nav aria-label="breadcrumb">
+						<ol class="breadcrumb">
+							<li class="breadcrumb-item">
+								<a href="/administrative/user">
+									{% trans "Users" %}
+								</a>
+							</li>
+							<li class="breadcrumb-item active">
+								{% trans "User" %} {{ user.username }}
+							</li>
+						</ol>
+					</nav>
+				</div>
+			</div>
+		</div>
 
 		{% if errors is defined %}
 			<div class="alert alert-danger">
@@ -21,55 +37,55 @@
 			{{ base.display_flash_message(env.sticky_session.message, 'user') }}
 		{% endif %}
 
-		<div class="panel panel-default">
-			<div class="panel-heading">
+		<div class="card">
+			<div class="card-header">
 				{% trans "Details" %}
 			</div>
-			<div class="panel-body">
+			<div class="card-body">
 				<form class="form form-horizontal form-condensed" method="post" action="/user?action=edit&id={{ user.id }}">
-					<div class="form-group{% if 'username' in errors|keys %} has-error{% endif %}">
-						<label for="username" class="col-xs-3 control-label">{% trans "Username" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'username' in errors|keys %} has-error{% endif %}">
+						<label for="username" class="col-form-label col-3 text-end">{% trans "Username" %}</label>
+						<div class="col-9">
 							<input type="text" name="user[username]" id="username" class="form-control" value="{{ user.username }}">
 							{{ form.invalid_input('username', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'firstname' in errors|keys %} has-error{% endif %}">
-						<label for="firstname" class="col-xs-3 control-label">{% trans "Firstname" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'firstname' in errors|keys %} has-error{% endif %}">
+						<label for="firstname" class="col-form-label col-3 text-end">{% trans "Firstname" %}</label>
+						<div class="col-9">
 							<input type="text" name="user[firstname]" id="firstname" class="form-control" value="{{ user.firstname }}">
 							{{ form.invalid_input('firstname', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'lastname' in errors|keys %} has-error{% endif %}">
-						<label for="lastname" class="col-xs-3 control-label">{% trans "Lastname" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'lastname' in errors|keys %} has-error{% endif %}">
+						<label for="lastname" class="col-form-label col-3 text-end">{% trans "Lastname" %}</label>
+						<div class="col-9">
 							<input type="text" name="user[lastname]" id="lastname" class="form-control" value="{{ user.lastname }}">
 							{{ form.invalid_input('lastname', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'email' in errors|keys %} has-error{% endif %}">
-						<label for="email" class="col-xs-3 control-label">{% trans "Email" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'email' in errors|keys %} has-error{% endif %}">
+						<label for="email" class="col-form-label col-3 text-end">{% trans "Email" %}</label>
+						<div class="col-9">
 							<input type="text" name="user[email]" id="email" class="form-control" value="{{ user.email }}">
 							{{ form.invalid_input('email', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'password' in errors|keys %} has-error{% endif %}">
-						<label for="password" class="col-xs-3 control-label">{% trans "Password" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'password' in errors|keys %} has-error{% endif %}">
+						<label for="password" class="col-form-label col-3 text-end">{% trans "Password" %}</label>
+						<div class="col-9">
 							<input type="password" name="user[password]" id="password" class="form-control" value="DONOTUPDATEME">
 							{{ form.invalid_input('password', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label for="language_id" class="col-xs-3 control-label">{% trans "Language" %}</label>
-						<div class="col-xs-4">
+					<div class="row mb-3">
+						<label for="language_id" class="col-form-label col-3 text-end">{% trans "Language" %}</label>
+						<div class="col-4">
 							<select name="user[language_id]" id="language_id" class="form-control">
 								{% for language in languages %}
 									<option value="{{ language.id }}"{% if user.language_id == language.id %} selected{% endif %}>{{ language.name }}</option>
@@ -78,9 +94,9 @@
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label for="language_id" class="col-xs-3 control-label">{% trans "Role" %}</label>
-						<div class="col-xs-4">
+					<div class="row mb-3">
+						<label for="language_id" class="col-form-label col-3 text-end">{% trans "Role" %}</label>
+						<div class="col-4">
 							<select name="user[role_id]" id="language_id" class="form-control">
 								{% for role in roles %}
 									<option value="{{ role.id }}"{% if role.id == user.role_id %} selected{% endif %}>{{ role.name }}</option>
@@ -89,15 +105,15 @@
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label for="language_id" class="col-xs-3 control-label">{% trans "Receive expired invoice overview" %}</label>
-						<div class="col-xs-4">
+					<div class="row mb-3">
+						<label for="language_id" class="col-form-label col-3 text-end">{% trans "Receive expired invoice overview" %}</label>
+						<div class="col-4">
 							<input type="checkbox" data-group-cls="btn-group-xs" name="user[receive_expired_invoice_overview]"{% if user.receive_expired_invoice_overview == 1 %} checked{% endif %}>
 						</div>
 					</div>
 
-					<div class="form-group">
-						<div class="col-xs-3 col-xs-offset-3">
+					<div class="row mb-3">
+						<div class="col-3 offset-3">
 							<button class="btn btn-primary">
 								{% trans "Save" %}
 							</button>
@@ -122,55 +138,55 @@
 			</div>
 		{% endif %}
 
-		<div class="panel panel-default">
-			<div class="panel-heading">
+		<div class="card">
+			<div class="card-header">
 				{% trans "Details" %}
 			</div>
-			<div class="panel-body">
+			<div class="card-body">
 				<form class="form form-horizontal form-condensed" method="post" action="/user?action=add">
-					<div class="form-group{% if 'username' in errors|keys %} has-error{% endif %}">
-						<label for="username" class="col-xs-3 control-label">{% trans "Username" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'username' in errors|keys %} has-error{% endif %}">
+						<label for="username" class="col-form-label col-3 text-end">{% trans "Username" %}</label>
+						<div class="col-9">
 							<input type="text" name="user[username]" id="username" class="form-control" value="{{ env.post.user.username }}">
 							{{ form.invalid_input('username', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'firstname' in errors|keys %} has-error{% endif %}">
-						<label for="firstname" class="col-xs-3 control-label">{% trans "Firstname" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'firstname' in errors|keys %} has-error{% endif %}">
+						<label for="firstname" class="col-form-label col-3 text-end">{% trans "Firstname" %}</label>
+						<div class="col-9">
 							<input type="text" name="user[firstname]" id="firstname" class="form-control" value="{{ env.post.user.firstname }}">
 							{{ form.invalid_input('firstname', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'lastname' in errors|keys %} has-error{% endif %}">
-						<label for="lastname" class="col-xs-3 control-label">{% trans "Lastname" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'lastname' in errors|keys %} has-error{% endif %}">
+						<label for="lastname" class="col-form-label col-3 text-end">{% trans "Lastname" %}</label>
+						<div class="col-9">
 							<input type="text" name="user[lastname]" id="lastname" class="form-control" value="{{ env.post.user.lastname }}">
 							{{ form.invalid_input('lastname', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'email' in errors|keys %} has-error{% endif %}">
-						<label for="email" class="col-xs-3 control-label">{% trans "Email" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'email' in errors|keys %} has-error{% endif %}">
+						<label for="email" class="col-form-label col-3 text-end">{% trans "Email" %}</label>
+						<div class="col-9">
 							<input type="text" name="user[email]" id="email" class="form-control" value="{{ env.post.user.email }}">
 							{{ form.invalid_input('email', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group{% if 'password' in errors|keys %} has-error{% endif %}">
-						<label for="password" class="col-xs-3 control-label">{% trans "Password" %}</label>
-						<div class="col-xs-9">
+					<div class="row mb-3{% if 'password' in errors|keys %} has-error{% endif %}">
+						<label for="password" class="col-form-label col-3 text-end">{% trans "Password" %}</label>
+						<div class="col-9">
 							<input type="password" name="user[password]" id="password" class="form-control" value="{{ env.post.user.password }}">
 							{{ form.invalid_input('password', errors) }}
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label for="language_id" class="col-xs-3 control-label">{% trans "Language" %}</label>
-						<div class="col-xs-4">
+					<div class="row mb-3">
+						<label for="language_id" class="col-form-label col-3 text-end">{% trans "Language" %}</label>
+						<div class="col-4">
 							<select name="user[language_id]" id="language_id" class="form-control">
 								{% for language in languages %}
 									<option value="{{ language.id }}"{% if env.post.user.language_id == language.id %} selected{% endif %}>{{ language.name }}</option>
@@ -179,9 +195,9 @@
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label for="language_id" class="col-xs-3 control-label">{% trans "Role" %}</label>
-						<div class="col-xs-4">
+					<div class="row mb-3">
+						<label for="language_id" class="col-form-label col-3 text-end">{% trans "Role" %}</label>
+						<div class="col-4">
 							<select name="user[role_id]" id="language_id" class="form-control">
 								{% for role in roles %}
 									<option value="{{ role.id }}"{% if role.id == user.role_id %} selected{% endif %}>{{ role.name }}</option>
@@ -190,15 +206,15 @@
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label for="language_id" class="col-xs-3 control-label">{% trans "Receive expired invoice overview" %}</label>
-						<div class="col-xs-4">
+					<div class="row mb-3">
+						<label for="language_id" class="col-form-label col-3 text-end">{% trans "Receive expired invoice overview" %}</label>
+						<div class="col-4">
 							<input type="checkbox" data-group-cls="btn-group-xs" name="user[receive_expired_invoice_overview]">
 						</div>
 					</div>
 
-					<div class="form-group">
-						<div class="col-xs-3 col-xs-offset-3">
+					<div class="row mb-3">
+						<div class="col-3 offset-3">
 							<button class="btn btn-primary">
 								{% trans "Save" %}
 							</button>
@@ -220,17 +236,17 @@
 			{{ base.display_flash_message(env.sticky_session.message, 'user') }}
 		{% endif %}
 
-		<div class="panel panel-default">
-			<div class="panel-heading">
+		<div class="card">
+			<div class="card-header">
 				<div class="pull-right">
 					<a href="/user?action=add" title="">
-						<span class="glyphicon glyphicon-plus-sign"></span>
+						<i data-feather="plus"></i>
 						{% trans "Add user" %}
 					</a>
 				</div>
 				{{ base.pager_count(pager.item_count) }}
 			</div>
-			<div class="panel-body">
+			<div class="card-body">
 			{% for user in pager.items %}
 				{% if loop.first %}
 					<table class="table table-hover table-striped table-condensed table-responsive">
@@ -256,13 +272,13 @@
 						<td>{{ user.role.name }}</td>
 						<td>
 							<a href="/user?action=edit&id={{ user.id }}" title="">
-								<span class="glyphicon glyphicon-pencil"></span>
+								<i data-feather="edit"></i>
 							</a>
 						</td>
 						<td>
 						{% if env.session.user.id != user.id %}
 							<a href="/user?id={{ user.id }}&action=delete" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure you want to remove this user?" %}">
-								<span class="glyphicon glyphicon-remove" />
+								<i data-feather="trash-2"></i>
 							</a>
 						{% endif %}
 						</td>
